--- a/src/Winhance.UI/Features/Common/Localization/el.json
+++ b/src/Winhance.UI/Features/Common/Localization/el.json
@@ -442,8 +442,8 @@
   "Setting_updates-policy-mode_Option_1": "Μόνο Ενημερώσεις Ασφαλείας (Προτείνεται)",
   "Setting_updates-policy-mode_Option_2": "Σε παύση για μεγάλο χρονικό διάστημα (Κατάργηση παύσης στις Ρυθμίσεις)",
   "Setting_updates-policy-mode_Option_3": "Απενεργοποιημένο (ΔΕΝ Προτείνεται, Κίνδυνος Ασφαλείας)",
-  "Setting_updates-policy-mode_OptionWarning_2": "⚠️ ΠΡΟΕΙΔΟΠΟΙΗΣΗ: Η παύση ενημερώσεων για μεγάλο χρονικό διάστημα αφήνει το σύστημά σας ευάλωτο σε απειλές ασφαλείας. Χρησιμοποιήστε με δική σας ευθύνη.",
-  "Setting_updates-policy-mode_OptionWarning_3": "⚠️ ΠΡΟΕΙΔΟΠΟΙΗΣΗ: Η απενεργοποίηση ενημερώσεων αφήνει το σύστημά σας ευάλωτο σε απειλές ασφαλείας. Χρησιμοποιήστε με δική σας ευθύνη.",
+  "Setting_updates-policy-mode_OptionWarning_2": "ΠΡΟΕΙΔΟΠΟΙΗΣΗ: Η παύση ενημερώσεων για μεγάλο χρονικό διάστημα αφήνει το σύστημά σας ευάλωτο σε απειλές ασφαλείας. Χρησιμοποιήστε με δική σας ευθύνη.",
+  "Setting_updates-policy-mode_OptionWarning_3": "ΠΡΟΕΙΔΟΠΟΙΗΣΗ: Η απενεργοποίηση ενημερώσεων αφήνει το σύστημά σας ευάλωτο σε απειλές ασφαλείας. Χρησιμοποιήστε με δική σας ευθύνη.",
   "Setting_updates-policy-mode_OptionTooltip_0": "Προεπιλεγμένη συμπεριφορά Windows - αυτόματες ενημερώσεις ενεργοποιημένες",
   "Setting_updates-policy-mode_OptionTooltip_1": "Εγκατάσταση μόνο κρίσιμων ενημερώσεων ασφαλείας, αναβολή ενημερώσεων δυνατοτήτων κατά 1 έτος",
   "Setting_updates-policy-mode_OptionTooltip_2": "Παύση όλων των ενημερώσεων μέχρι το 2051 - χειροκίνητη κατάργηση παύσης στις Ρυθμίσεις Windows όταν χρειάζεται",
@@ -691,7 +691,7 @@
   "Setting_gaming-bits-service_Description": "Μεταφέρει Ενημερώσεις Windows και λήψεις στο παρασκήνιο. Η ρύθμιση σε Χειροκίνητο επιτρέπει στις ενημερώσεις να λειτουργούν αποτρέποντας ταυτόχρονα τη συνεχή δραστηριότητα παρασκηνίου κατά τη διάρκεια του παιχνιδιού",
   "Setting_gaming-xbox-auth-manager_Name": "Διαχειριστής Ελέγχου Ταυτότητας Xbox Live",
   "Setting_gaming-xbox-auth-manager_Description": "Παρέχει υπηρεσίες ελέγχου ταυτότητας και εξουσιοδότησης για Xbox Live. Ασφαλές για απενεργοποίηση αν δεν χρησιμοποιείτε Xbox Game Pass, παιχνίδια Microsoft Store ή λειτουργίες Xbox",
-  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "⚠️ Η απενεργοποίηση θα αποτρέψει τη λειτουργία του Xbox Game Pass και παιχνιδιών Microsoft Store",
+  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "Η απενεργοποίηση θα αποτρέψει τη λειτουργία του Xbox Game Pass και παιχνιδιών Microsoft Store",
   "Setting_gaming-xbox-game-save_Name": "Αποθήκευση Παιχνιδιού Xbox Live",
   "Setting_gaming-xbox-game-save_Description": "Συγχρονίζει αποθηκεύσεις παιχνιδιών στο cloud Xbox Live. Απαιτείται μόνο για Xbox Game Pass και παιχνίδια Microsoft Store με λειτουργίες αποθήκευσης cloud",
   "Setting_gaming-xbox-networking_Name": "Υπηρεσία Δικτύωσης Xbox Live",
@@ -1204,7 +1204,7 @@
   "Status_IdentifyingApps": "Αναγνώριση εφαρμογών Windows...",
   "Status_VerifyingApps": "Επαλήθευση ποιες εφαρμογές είναι εγκατεστημένες...",
   "Status_SortingApps": "Ταξινόμηση εφαρμογών για εμφάνιση...",
-  "Common_RestartRequired": "⚠️ Απαιτείται επανεκκίνηση συστήματος για να ισχύσουν οι αλλαγές",
+  "Common_RestartRequired": "Απαιτείται επανεκκίνηση συστήματος για να ισχύσουν οι αλλαγές",
   "Compatibility_Windows10Only": "Αυτή η ρύθμιση ισχύει μόνο για Windows 10",
   "Compatibility_Windows11Only": "Αυτή η ρύθμιση ισχύει μόνο για Windows 11",
   "Compatibility_MinBuild": "Απαιτεί έκδοση Windows {0} ή νεότερη",
