--- a/src/Winhance.UI/Features/Common/Localization/en.json
+++ b/src/Winhance.UI/Features/Common/Localization/en.json
@@ -442,8 +442,8 @@
   "Setting_updates-policy-mode_Option_1": "Security Updates Only (Recommended)",
   "Setting_updates-policy-mode_Option_2": "Paused for a long time (Unpause in Settings)",
   "Setting_updates-policy-mode_Option_3": "Disabled (NOT Recommended, Security Risk)",
-  "Setting_updates-policy-mode_OptionWarning_2": "⚠️ WARNING: Pausing updates for a long time leaves your system vulnerable to security threats. Use at your own risk.",
-  "Setting_updates-policy-mode_OptionWarning_3": "⚠️ WARNING: Disabling updates leaves your system vulnerable to security threats. Use at your own risk.",
+  "Setting_updates-policy-mode_OptionWarning_2": "WARNING: Pausing updates for a long time leaves your system vulnerable to security threats. Use at your own risk.",
+  "Setting_updates-policy-mode_OptionWarning_3": "WARNING: Disabling updates leaves your system vulnerable to security threats. Use at your own risk.",
   "Setting_updates-policy-mode_OptionTooltip_0": "Windows default behavior - automatic updates enabled",
   "Setting_updates-policy-mode_OptionTooltip_1": "Only install critical security updates, defer feature updates by 1 year",
   "Setting_updates-policy-mode_OptionTooltip_2": "Pause all updates until 2051 - manually unpause in Windows Settings when needed",
@@ -691,7 +691,7 @@
   "Setting_gaming-bits-service_Description": "Transfers Windows Updates and downloads in the background. Setting to Manual allows updates to work while preventing constant background activity during gaming",
   "Setting_gaming-xbox-auth-manager_Name": "Xbox Live Auth Manager",
   "Setting_gaming-xbox-auth-manager_Description": "Provides authentication and authorization services for Xbox Live. Safe to disable if you don\u0027t use Xbox Game Pass, Microsoft Store games, or Xbox features",
-  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "⚠️ Disabling will prevent Xbox Game Pass and Microsoft Store games from working",
+  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "Disabling will prevent Xbox Game Pass and Microsoft Store games from working",
   "Setting_gaming-xbox-game-save_Name": "Xbox Live Game Save",
   "Setting_gaming-xbox-game-save_Description": "Syncs game saves to Xbox Live cloud. Only needed for Xbox Game Pass and Microsoft Store games with cloud save features",
   "Setting_gaming-xbox-networking_Name": "Xbox Live Networking Service",
@@ -1208,7 +1208,7 @@
   "Status_IdentifyingApps": "Identifying Windows applications...",
   "Status_VerifyingApps": "Verifying which applications are installed...",
   "Status_SortingApps": "Sorting applications for display...",
-  "Common_RestartRequired": "⚠️ System restart required for changes to take effect",
+  "Common_RestartRequired": "System restart required for changes to take effect",
   "Compatibility_Windows10Only": "This setting applies to Windows 10 only",
   "Compatibility_Windows11Only": "This setting applies to Windows 11 only",
   "Compatibility_MinBuild": "Requires Windows build {0} or higher",
