--- a/src/Winhance.UI/Features/Common/Localization/lt.json
+++ b/src/Winhance.UI/Features/Common/Localization/lt.json
@@ -691,7 +691,7 @@
   "Setting_gaming-bits-service_Description": "Perduoda Windows naujinimus ir atsisiuntimus fone. Nustatymas į rankinį leidžia naujinimams veikti, išvengiant nuolatinės foninės veiklos žaidimo metu",
   "Setting_gaming-xbox-auth-manager_Name": "Xbox Live autentifikavimo tvarkytuvė",
   "Setting_gaming-xbox-auth-manager_Description": "Suteikia autentifikavimo ir autorizavimo paslaugas Xbox Live. Saugiai išjungiama, jei nenaudojate Xbox Game Pass, Microsoft parduotuvės žaidimų ar Xbox funkcijų",
-  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "⚠️ Išjungus neveiks Xbox Game Pass ir Microsoft parduotuvės žaidimai",
+  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "Išjungus neveiks Xbox Game Pass ir Microsoft parduotuvės žaidimai",
   "Setting_gaming-xbox-game-save_Name": "Xbox Live žaidimų išsaugojimas",
   "Setting_gaming-xbox-game-save_Description": "Sinchronizuoja žaidimų išsaugojimus su Xbox Live debesimi. Reikalinga tik Xbox Game Pass ir Microsoft parduotuvės žaidimams su debesies išsaugojimo funkcijomis",
   "Setting_gaming-xbox-networking_Name": "Xbox Live tinklo paslauga",
@@ -1204,7 +1204,7 @@
   "Status_IdentifyingApps": "Identifikuojamos Windows programos...",
   "Status_VerifyingApps": "Tikrinama, kurios programos yra įdiegtos...",
   "Status_SortingApps": "Rūšiuojamos programos rodymui...",
-  "Common_RestartRequired": "⚠️ Norint, kad pakeitimai įsigaliotų, reikalingas sistemos perkrovimas",
+  "Common_RestartRequired": "Norint, kad pakeitimai įsigaliotų, reikalingas sistemos perkrovimas",
   "Compatibility_Windows10Only": "Šis nustatymas taikomas tik Windows 10",
   "Compatibility_Windows11Only": "Šis nustatymas taikomas tik Windows 11",
   "Compatibility_MinBuild": "Reikalinga Windows versija {0} arba naujesnė",
