--- a/src/Winhance.UI/Features/Common/Localization/lv.json
+++ b/src/Winhance.UI/Features/Common/Localization/lv.json
@@ -442,8 +442,8 @@
   "Setting_updates-policy-mode_Option_1": "Tikai drošības atjauninājumi (ieteicams)",
   "Setting_updates-policy-mode_Option_2": "Pauzēts uz ilgu laiku (atcelt pauzi iestatījumos)",
   "Setting_updates-policy-mode_Option_3": "Atspējots (NAV ieteicams, drošības risks)",
-  "Setting_updates-policy-mode_OptionWarning_2": "⚠️ BRĪDINĀJUMS: Atjauninājumu pauzēšana uz ilgu laiku padara jūsu sistēmu neaizsargātu pret drošības draudiem. Lietojiet uz savu risku.",
-  "Setting_updates-policy-mode_OptionWarning_3": "⚠️ BRĪDINĀJUMS: Atjauninājumu atspējošana padara jūsu sistēmu neaizsargātu pret drošības draudiem. Lietojiet uz savu risku.",
+  "Setting_updates-policy-mode_OptionWarning_2": "BRĪDINĀJUMS: Atjauninājumu pauzēšana uz ilgu laiku padara jūsu sistēmu neaizsargātu pret drošības draudiem. Lietojiet uz savu risku.",
+  "Setting_updates-policy-mode_OptionWarning_3": "BRĪDINĀJUMS: Atjauninājumu atspējošana padara jūsu sistēmu neaizsargātu pret drošības draudiem. Lietojiet uz savu risku.",
   "Setting_updates-policy-mode_OptionTooltip_0": "Windows noklusējuma uzvedība - automātiskie atjauninājumi iespējoti",
   "Setting_updates-policy-mode_OptionTooltip_1": "Instalēt tikai kritiskos drošības atjauninājumus, atlikt funkciju atjauninājumus par 1 gadu",
   "Setting_updates-policy-mode_OptionTooltip_2": "Pauzēt visus atjauninājumus līdz 2051. gadam - manuāli atcelt pauzi Windows iestatījumos, kad nepieciešams",
@@ -691,7 +691,7 @@
   "Setting_gaming-bits-service_Description": "Pārsūta Windows atjauninājumus un lejupielādes fonā. Iestatīšana uz Manuāli ļauj atjauninājumiem darboties, vienlaikus novēršot pastāvīgu fona darbību spēlēšanas laikā",
   "Setting_gaming-xbox-auth-manager_Name": "Xbox Live autentifikācijas pārvaldnieks",
   "Setting_gaming-xbox-auth-manager_Description": "Nodrošina autentifikācijas un autorizācijas pakalpojumus Xbox Live. Droši atspējot, ja neizmantojat Xbox Game Pass, Microsoft Store spēles vai Xbox funkcijas",
-  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "⚠️ Atspējošana neļaus darboties Xbox Game Pass un Microsoft Store spēlēm",
+  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "Atspējošana neļaus darboties Xbox Game Pass un Microsoft Store spēlēm",
   "Setting_gaming-xbox-game-save_Name": "Xbox Live spēļu saglabāšana",
   "Setting_gaming-xbox-game-save_Description": "Sinhronizē spēļu saglabātos datus ar Xbox Live mākoni. Nepieciešams tikai Xbox Game Pass un Microsoft Store spēlēm ar mākoņa saglabāšanas funkcijām",
   "Setting_gaming-xbox-networking_Name": "Xbox Live tīkla pakalpojums",
@@ -1094,8 +1094,8 @@
   "WIMUtil_Status_Extracting": "Izvelk ISO saturu...",
   "WIMUtil_Status_IsoSelected": "ISO atlasīts, gatavs sākt ekstrakciju",
   "WIMUtil_Status_NoIsoSelected": "Nav atlasīts ISO",
-  "WIMUtil_Status_WaitForConversion": "⚠️ Gaidiet konversijas pabeigšanu",
-  "WIMUtil_Status_CompleteStep1": "⚠️ Pabeidziet 1. soli",
+  "WIMUtil_Status_WaitForConversion": "Gaidiet konversijas pabeigšanu",
+  "WIMUtil_Status_CompleteStep1": "Pabeidziet 1. soli",
   "WIMUtil_Status_ReadyToAddXml": "Gatavs pievienot XML",
   "WIMUtil_Status_XmlAdded": "✓ XML pievienots",
   "WIMUtil_Status_NoXmlAdded": "Nav pievienots XML (neobligāti)",
@@ -1204,7 +1204,7 @@
   "Status_IdentifyingApps": "Identificē Windows lietojumprogrammas...",
   "Status_VerifyingApps": "Pārbauda, kuras lietojumprogrammas ir instalētas...",
   "Status_SortingApps": "Kārto lietojumprogrammas attēlošanai...",
-  "Common_RestartRequired": "⚠️ Lai izmaiņas stātos spēkā, nepieciešama sistēmas restartēšana",
+  "Common_RestartRequired": "Lai izmaiņas stātos spēkā, nepieciešama sistēmas restartēšana",
   "Compatibility_Windows10Only": "Šis iestatījums attiecas tikai uz Windows 10",
   "Compatibility_Windows11Only": "Šis iestatījums attiecas tikai uz Windows 11",
   "Compatibility_MinBuild": "Nepieciešama Windows būvējuma versija {0} vai jaunāka",
