--- a/src/Winhance.UI/Features/Common/Localization/pl.json
+++ b/src/Winhance.UI/Features/Common/Localization/pl.json
@@ -442,8 +442,8 @@
   "Setting_updates-policy-mode_Option_1": "Tylko aktualizacje zabezpieczeń (zalecane)",
   "Setting_updates-policy-mode_Option_2": "Wstrzymane na długi czas (wznów w Ustawieniach)",
   "Setting_updates-policy-mode_Option_3": "Wyłączone (NIEZALECANE, ryzyko bezpieczeństwa)",
-  "Setting_updates-policy-mode_OptionWarning_2": "⚠️ OSTRZEŻENIE: Wstrzymanie aktualizacji na długi czas naraża system na zagrożenia bezpieczeństwa. Używaj na własne ryzyko.",
-  "Setting_updates-policy-mode_OptionWarning_3": "⚠️ OSTRZEŻENIE: Wyłączenie aktualizacji naraża system na zagrożenia bezpieczeństwa. Używaj na własne ryzyko.",
+  "Setting_updates-policy-mode_OptionWarning_2": "OSTRZEŻENIE: Wstrzymanie aktualizacji na długi czas naraża system na zagrożenia bezpieczeństwa. Używaj na własne ryzyko.",
+  "Setting_updates-policy-mode_OptionWarning_3": "OSTRZEŻENIE: Wyłączenie aktualizacji naraża system na zagrożenia bezpieczeństwa. Używaj na własne ryzyko.",
   "Setting_updates-policy-mode_OptionTooltip_0": "Domyślne zachowanie systemu Windows – automatyczne aktualizacje włączone",
   "Setting_updates-policy-mode_OptionTooltip_1": "Instaluj tylko krytyczne aktualizacje zabezpieczeń, odraczaj aktualizacje funkcji o 1 rok",
   "Setting_updates-policy-mode_OptionTooltip_2": "Wstrzymaj wszystkie aktualizacje do 2051 roku – wznów ręcznie w Ustawieniach Windows, gdy będzie to potrzebne",
@@ -691,7 +691,7 @@
   "Setting_gaming-bits-service_Description": "Transferuje aktualizacje systemu Windows i pobrania w tle. Ustawienie na Ręczne pozwala na działanie aktualizacji, jednocześnie zapobiegając stałej aktywności w tle podczas grania",
   "Setting_gaming-xbox-auth-manager_Name": "Menedżer uwierzytelniania Xbox Live",
   "Setting_gaming-xbox-auth-manager_Description": "Zapewnia usługi uwierzytelniania i autoryzacji dla Xbox Live. Bezpieczne do wyłączenia, jeśli nie używasz Xbox Game Pass, gier z Microsoft Store ani funkcji Xbox",
-  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "⚠️ Wyłączenie uniemożliwi działanie Xbox Game Pass i gier z Microsoft Store",
+  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "Wyłączenie uniemożliwi działanie Xbox Game Pass i gier z Microsoft Store",
   "Setting_gaming-xbox-game-save_Name": "Zapisy gier Xbox Live",
   "Setting_gaming-xbox-game-save_Description": "Synchronizuje zapisy gier z chmurą Xbox Live. Potrzebne tylko dla Xbox Game Pass i gier z Microsoft Store z funkcją zapisu w chmurze",
   "Setting_gaming-xbox-networking_Name": "Usługa sieciowa Xbox Live",
@@ -1204,7 +1204,7 @@
   "Status_IdentifyingApps": "Identyfikowanie aplikacji systemu Windows...",
   "Status_VerifyingApps": "Weryfikacja zainstalowanych aplikacji...",
   "Status_SortingApps": "Sortowanie aplikacji do wyświetlenia...",
-  "Common_RestartRequired": "⚠️ Wymagane ponowne uruchomienie systemu, aby zmiany weszły w życie",
+  "Common_RestartRequired": "Wymagane ponowne uruchomienie systemu, aby zmiany weszły w życie",
   "Compatibility_Windows10Only": "To ustawienie dotyczy tylko systemu Windows 10",
   "Compatibility_Windows11Only": "To ustawienie dotyczy tylko systemu Windows 11",
   "Compatibility_MinBuild": "Wymaga kompilacji Windows {0} lub nowszej",
