--- a/src/Winhance.UI/Features/Common/Localization/pt.json
+++ b/src/Winhance.UI/Features/Common/Localization/pt.json
@@ -442,8 +442,8 @@
   "Setting_updates-policy-mode_Option_1": "Apenas Atualizações de Segurança (Recomendado)",
   "Setting_updates-policy-mode_Option_2": "Pausado por um longo período (Retomar nas Definições)",
   "Setting_updates-policy-mode_Option_3": "Desativado (NÃO Recomendado, Risco de Segurança)",
-  "Setting_updates-policy-mode_OptionWarning_2": "⚠️ AVISO: Pausar as atualizações por um longo período deixa o seu sistema vulnerável a ameaças de segurança. Use por sua conta e risco.",
-  "Setting_updates-policy-mode_OptionWarning_3": "⚠️ AVISO: Desativar as atualizações deixa o seu sistema vulnerável a ameaças de segurança. Use por sua conta e risco.",
+  "Setting_updates-policy-mode_OptionWarning_2": "AVISO: Pausar as atualizações por um longo período deixa o seu sistema vulnerável a ameaças de segurança. Use por sua conta e risco.",
+  "Setting_updates-policy-mode_OptionWarning_3": "AVISO: Desativar as atualizações deixa o seu sistema vulnerável a ameaças de segurança. Use por sua conta e risco.",
   "Setting_updates-policy-mode_OptionTooltip_0": "Comportamento predefinido do Windows - atualizações automáticas ativadas",
   "Setting_updates-policy-mode_OptionTooltip_1": "Instalar apenas atualizações de segurança críticas, adiar atualizações de funcionalidades por 1 ano",
   "Setting_updates-policy-mode_OptionTooltip_2": "Pausar todas as atualizações até 2051 - retomar manualmente nas Definições do Windows quando necessário",
@@ -691,7 +691,7 @@
   "Setting_gaming-bits-service_Description": "Transfere Atualizações do Windows e transferências em segundo plano. Definir como Manual permite que as atualizações funcionem, evitando atividade constante em segundo plano durante o jogo",
   "Setting_gaming-xbox-auth-manager_Name": "Gestor de Autenticação Xbox Live",
   "Setting_gaming-xbox-auth-manager_Description": "Fornece serviços de autenticação e autorização para o Xbox Live. Seguro para desativar se não usar jogos do Xbox Game Pass, da Microsoft Store ou funcionalidades da Xbox",
-  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "⚠️ Desativar impedirá o funcionamento dos jogos do Xbox Game Pass e da Microsoft Store",
+  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "Desativar impedirá o funcionamento dos jogos do Xbox Game Pass e da Microsoft Store",
   "Setting_gaming-xbox-game-save_Name": "Gravação de Jogos Xbox Live",
   "Setting_gaming-xbox-game-save_Description": "Sincroniza as gravações de jogos para a nuvem do Xbox Live. Apenas necessário para jogos do Xbox Game Pass e da Microsoft Store com funcionalidades de gravação na nuvem",
   "Setting_gaming-xbox-networking_Name": "Serviço de Rede Xbox Live",
@@ -1204,7 +1204,7 @@
   "Status_IdentifyingApps": "A identificar aplicações do Windows...",
   "Status_VerifyingApps": "A verificar quais as aplicações que estão instaladas...",
   "Status_SortingApps": "A ordenar aplicações para exibição...",
-  "Common_RestartRequired": "⚠️ É necessário reiniciar o sistema para que as alterações tenham efeito",
+  "Common_RestartRequired": "É necessário reiniciar o sistema para que as alterações tenham efeito",
   "Compatibility_Windows10Only": "Esta definição aplica-se apenas ao Windows 10",
   "Compatibility_Windows11Only": "Esta definição aplica-se apenas ao Windows 11",
   "Compatibility_MinBuild": "Requer a compilação {0} do Windows ou superior",
