--- a/src/Winhance.UI/Features/Common/Localization/uk.json
+++ b/src/Winhance.UI/Features/Common/Localization/uk.json
@@ -442,8 +442,8 @@
   "Setting_updates-policy-mode_Option_1": "Лише оновлення безпеки (рекомендовано)",
   "Setting_updates-policy-mode_Option_2": "Призупинено на тривалий час (зніміть паузу в налаштуваннях)",
   "Setting_updates-policy-mode_Option_3": "Вимкнено (НЕ РЕКОМЕНДУЄТЬСЯ, ризик безпеки)",
-  "Setting_updates-policy-mode_OptionWarning_2": "⚠️ ПОПЕРЕДЖЕННЯ: Призупинення оновлень на тривалий час залишає вашу систему вразливою до загроз безпеки. Використовуйте на свій страх і ризик.",
-  "Setting_updates-policy-mode_OptionWarning_3": "⚠️ ПОПЕРЕДЖЕННЯ: Вимкнення оновлень залишає вашу систему вразливою до загроз безпеки. Використовуйте на свій страх і ризик.",
+  "Setting_updates-policy-mode_OptionWarning_2": "ПОПЕРЕДЖЕННЯ: Призупинення оновлень на тривалий час залишає вашу систему вразливою до загроз безпеки. Використовуйте на свій страх і ризик.",
+  "Setting_updates-policy-mode_OptionWarning_3": "ПОПЕРЕДЖЕННЯ: Вимкнення оновлень залишає вашу систему вразливою до загроз безпеки. Використовуйте на свій страх і ризик.",
   "Setting_updates-policy-mode_OptionTooltip_0": "Поведінка Windows за замовчуванням - автоматичні оновлення увімкнено",
   "Setting_updates-policy-mode_OptionTooltip_1": "Встановлювати лише критичні оновлення безпеки, відкладати оновлення функцій на 1 рік",
   "Setting_updates-policy-mode_OptionTooltip_2": "Призупинити всі оновлення до 2051 року - зніміть паузу вручну в налаштуваннях Windows, коли це необхідно",
@@ -691,7 +691,7 @@
   "Setting_gaming-bits-service_Description": "Передає оновлення Windows та завантаження у фоновому режимі. Встановлення режиму Ручний дозволяє працювати оновленням, запобігаючи постійній фоновій активності під час гри",
   "Setting_gaming-xbox-auth-manager_Name": "Менеджер автентифікації Xbox Live",
   "Setting_gaming-xbox-auth-manager_Description": "Надає послуги автентифікації та авторизації для Xbox Live. Безпечно вимикати, якщо ви не використовуєте Xbox Game Pass, ігри з Microsoft Store або функції Xbox",
-  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "⚠️ Вимкнення не дозволить працювати Xbox Game Pass та іграм з Microsoft Store",
+  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "Вимкнення не дозволить працювати Xbox Game Pass та іграм з Microsoft Store",
   "Setting_gaming-xbox-game-save_Name": "Збереження гри Xbox Live",
   "Setting_gaming-xbox-game-save_Description": "Синхронізує збереження ігор з хмарою Xbox Live. Потрібно лише для ігор Xbox Game Pass та Microsoft Store з функціями хмарного збереження",
   "Setting_gaming-xbox-networking_Name": "Мережева служба Xbox Live",
@@ -1204,7 +1204,7 @@
   "Status_IdentifyingApps": "Ідентифікація додатків Windows...",
   "Status_VerifyingApps": "Перевірка встановлених додатків...",
   "Status_SortingApps": "Сортування додатків для відображення...",
-  "Common_RestartRequired": "⚠️ Для набуття чинності змін потрібне перезавантаження системи",
+  "Common_RestartRequired": "Для набуття чинності змін потрібне перезавантаження системи",
   "Compatibility_Windows10Only": "Це налаштування стосується лише Windows 10",
   "Compatibility_Windows11Only": "Це налаштування стосується лише Windows 11",
   "Compatibility_MinBuild": "Потрібна збірка Windows {0} або новіша",
