--- a/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
+++ b/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
@@ -442,8 +442,8 @@
   "Setting_updates-policy-mode_Option_1": "仅安全更新（推荐）",
   "Setting_updates-policy-mode_Option_2": "长时间暂停（在设置中取消暂停）",
   "Setting_updates-policy-mode_Option_3": "禁用（不推荐，存在安全风险）",
-  "Setting_updates-policy-mode_OptionWarning_2": "⚠️ 警告：长时间暂停更新会使您的系统容易受到安全威胁。请自行承担风险。",
-  "Setting_updates-policy-mode_OptionWarning_3": "⚠️ 警告：禁用更新会使您的系统容易受到安全威胁。请自行承担风险。",
+  "Setting_updates-policy-mode_OptionWarning_2": "警告：长时间暂停更新会使您的系统容易受到安全威胁。请自行承担风险。",
+  "Setting_updates-policy-mode_OptionWarning_3": "警告：禁用更新会使您的系统容易受到安全威胁。请自行承担风险。",
   "Setting_updates-policy-mode_OptionTooltip_0": "Windows 默认行为 - 启用自动更新",
   "Setting_updates-policy-mode_OptionTooltip_1": "仅安装关键安全更新，将功能更新推迟 1 年",
   "Setting_updates-policy-mode_OptionTooltip_2": "暂停所有更新至 2051 年 - 需要时在 Windows 设置中手动取消暂停",
@@ -691,7 +691,7 @@
   "Setting_gaming-bits-service_Description": "在后台传输 Windows 更新和下载。设置为手动允许更新工作，同时防止在游戏期间持续的后台活动",
   "Setting_gaming-xbox-auth-manager_Name": "Xbox Live 身份验证管理器",
   "Setting_gaming-xbox-auth-manager_Description": "为 Xbox Live 提供身份验证和授权服务。如果您不使用 Xbox Game Pass、Microsoft Store 游戏或 Xbox 功能，则可以安全禁用",
-  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "⚠️ 禁用将导致 Xbox Game Pass 和 Microsoft Store 游戏无法正常工作",
+  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "禁用将导致 Xbox Game Pass 和 Microsoft Store 游戏无法正常工作",
   "Setting_gaming-xbox-game-save_Name": "Xbox Live 游戏存档",
   "Setting_gaming-xbox-game-save_Description": "将游戏存档同步到 Xbox Live 云。仅对于具有云存档功能的 Xbox Game Pass 和 Microsoft Store 游戏需要",
   "Setting_gaming-xbox-networking_Name": "Xbox Live 网络服务",
@@ -1204,7 +1204,7 @@
   "Status_IdentifyingApps": "正在识别 Windows 应用程序...",
   "Status_VerifyingApps": "正在验证已安装的应用程序...",
   "Status_SortingApps": "正在排序应用程序以供显示...",
-  "Common_RestartRequired": "⚠️ 需要重新启动系统才能使更改生效",
+  "Common_RestartRequired": "需要重新启动系统才能使更改生效",
   "Compatibility_Windows10Only": "此设置仅适用于 Windows 10",
   "Compatibility_Windows11Only": "此设置仅适用于 Windows 11",
   "Compatibility_MinBuild": "需要 Windows 版本 {0} 或更高版本",
