--- a/src/Winhance.UI/Features/Common/Localization/zh-Hant.json
+++ b/src/Winhance.UI/Features/Common/Localization/zh-Hant.json
@@ -442,8 +442,8 @@
   "Setting_updates-policy-mode_Option_1": "僅安全性更新 (推薦)",
   "Setting_updates-policy-mode_Option_2": "長期暫停 (可在設定中取消暫停)",
   "Setting_updates-policy-mode_Option_3": "已停用 (不推薦，有安全性風險)",
-  "Setting_updates-policy-mode_OptionWarning_2": "⚠️ 警告：長期暫停更新會使您的系統暴露於安全威脅中。請自行承擔風險。",
-  "Setting_updates-policy-mode_OptionWarning_3": "⚠️ 警告：停用更新會使您的系統暴露於安全威脅中。請自行承擔風險。",
+  "Setting_updates-policy-mode_OptionWarning_2": "警告：長期暫停更新會使您的系統暴露於安全威脅中。請自行承擔風險。",
+  "Setting_updates-policy-mode_OptionWarning_3": "警告：停用更新會使您的系統暴露於安全威脅中。請自行承擔風險。",
   "Setting_updates-policy-mode_OptionTooltip_0": "Windows 預設行為 - 啟用自動更新",
   "Setting_updates-policy-mode_OptionTooltip_1": "僅安裝關鍵安全性更新，功能更新延後 1 年",
   "Setting_updates-policy-mode_OptionTooltip_2": "暫停所有更新直到 2051 年 - 需要時可在 Windows 設定中手動取消暫停",
@@ -691,7 +691,7 @@
   "Setting_gaming-bits-service_Description": "在背景傳送 Windows 更新與下載。設為手動可允許更新運作，同時防止遊戲期間持續的背景活動",
   "Setting_gaming-xbox-auth-manager_Name": "Xbox Live 驗證管理員",
   "Setting_gaming-xbox-auth-manager_Description": "提供 Xbox Live 的驗證與授權服務。如果您不使用 Xbox Game Pass、Microsoft Store 遊戲或 Xbox 功能，可以安全停用",
-  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "⚠️ 停用將導致 Xbox Game Pass 與 Microsoft Store 遊戲無法運作",
+  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "停用將導致 Xbox Game Pass 與 Microsoft Store 遊戲無法運作",
   "Setting_gaming-xbox-game-save_Name": "Xbox Live 遊戲存檔",
   "Setting_gaming-xbox-game-save_Description": "將遊戲存檔同步到 Xbox Live 雲端。僅有 Xbox Game Pass 與具備雲端存檔功能的 Microsoft Store 遊戲需要",
   "Setting_gaming-xbox-networking_Name": "Xbox Live 網路服務",
@@ -1204,7 +1204,7 @@
   "Status_IdentifyingApps": "正在識別 Windows 應用程式...",
   "Status_VerifyingApps": "正在驗證已安裝的應用程式...",
   "Status_SortingApps": "正在排序應用程式以進行顯示...",
-  "Common_RestartRequired": "⚠️ 系統需要重新啟動才能讓變更生效",
+  "Common_RestartRequired": "系統需要重新啟動才能讓變更生效",
   "Compatibility_Windows10Only": "此設定僅適用於 Windows 10",
   "Compatibility_Windows11Only": "此設定僅適用於 Windows 11",
   "Compatibility_MinBuild": "需要 Windows 組建 {0} 或更高版本",
