--- a/src/Winhance.WPF/Localization/de.json
+++ b/src/Winhance.WPF/Localization/de.json
@@ -429,8 +429,8 @@
   "Setting_updates-policy-mode_Option_1": "Nur Sicherheitsupdates (Empfohlen)",
   "Setting_updates-policy-mode_Option_2": "Für lange Zeit angehalten (in Einstellungen fortsetzen)",
   "Setting_updates-policy-mode_Option_3": "Deaktiviert (NICHT empfohlen, Sicherheitsrisiko)",
-  "Setting_updates-policy-mode_OptionWarning_2": "⚠️ WARNUNG: Das Anhalten von Updates für eine lange Zeit macht Ihr System anfällig für Sicherheitsbedrohungen. Verwendung auf eigene Gefahr.",
-  "Setting_updates-policy-mode_OptionWarning_3": "⚠️ WARNUNG: Das Deaktivieren von Updates macht Ihr System anfällig für Sicherheitsbedrohungen. Verwendung auf eigene Gefahr.",
+  "Setting_updates-policy-mode_OptionWarning_2": "WARNUNG: Das Anhalten von Updates für eine lange Zeit macht Ihr System anfällig für Sicherheitsbedrohungen. Verwendung auf eigene Gefahr.",
+  "Setting_updates-policy-mode_OptionWarning_3": "WARNUNG: Das Deaktivieren von Updates macht Ihr System anfällig für Sicherheitsbedrohungen. Verwendung auf eigene Gefahr.",
   "Setting_updates-policy-mode_OptionTooltip_0": "Standardverhalten von Windows - automatische Updates aktiviert",
   "Setting_updates-policy-mode_OptionTooltip_1": "Nur kritische Sicherheitsupdates installieren, Funktionsupdates um 1 Jahr verschieben",
   "Setting_updates-policy-mode_OptionTooltip_2": "Alle Updates bis 2051 anhalten - manuell in den Windows-Einstellungen fortsetzen, wenn nötig",
@@ -678,7 +678,7 @@
   "Setting_gaming-bits-service_Description": "Überträgt Windows-Updates und Downloads im Hintergrund. Das Setzen auf Manuell ermöglicht, dass Updates funktionieren, während ständige Hintergrundaktivitäten während des Spielens vermieden werden",
   "Setting_gaming-xbox-auth-manager_Name": "Xbox Live-Authentifizierungs-Manager",
   "Setting_gaming-xbox-auth-manager_Description": "Bietet Authentifizierungs- und Autorisierungsdienste für Xbox Live. Sicher zu deaktivieren, wenn Sie Xbox Game Pass, Microsoft Store-Spiele oder Xbox-Funktionen nicht verwenden",
-  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "⚠️ Das Deaktivieren verhindert, dass Xbox Game Pass- und Microsoft Store-Spiele funktionieren",
+  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "Das Deaktivieren verhindert, dass Xbox Game Pass- und Microsoft Store-Spiele funktionieren",
   "Setting_gaming-xbox-game-save_Name": "Xbox Live Game Save",
   "Setting_gaming-xbox-game-save_Description": "Synchronisiert Spielstände mit der Xbox Live-Cloud. Nur für Xbox Game Pass- und Microsoft Store-Spiele mit Cloud-Speicherfunktionen erforderlich",
   "Setting_gaming-xbox-networking_Name": "Xbox Live-Netzwerkdienst",
@@ -1179,7 +1179,7 @@
   "Status_IdentifyingApps": "Windows-Anwendungen werden identifiziert...",
   "Status_VerifyingApps": "Es wird überprüft, welche Anwendungen installiert sind...",
   "Status_SortingApps": "Anwendungen werden zur Anzeige sortiert...",
-  "Common_RestartRequired": "⚠️ Systemneustart erforderlich, damit die Änderungen wirksam werden",
+  "Common_RestartRequired": "Systemneustart erforderlich, damit die Änderungen wirksam werden",
   "Compatibility_Windows10Only": "Diese Einstellung gilt nur für Windows 10",
   "Compatibility_Windows11Only": "Diese Einstellung gilt nur für Windows 11",
   "Compatibility_MinBuild": "Erfordert Windows Build {0} oder höher",
@@ -1430,7 +1430,7 @@
   "Setting_gaming-sysmain-service_Option_2": "Automatisch (empfohlen für HDD)",
   "Setting_power-plan-selection_Description": "Wählen Sie den aktiven Energiesparplan für Ihr System aus",
   "Dialog_AdvancedPowerWarning_Title": "Warnung vor erweiterten Einstellungen",
-  "Dialog_AdvancedPowerWarning_Message": "⚠️ Warnung vor erweiterten Energieeinstellungen\n\nDiese Einstellung wird normalerweise nicht in den Windows-Energieoptionen angezeigt und erfordert Registrierungsänderungen für den Zugriff.\n\nEine falsche Änderung kann zu Folgendem führen:\n• Systeminstabilität oder unerwartetes Verhalten\n• Leistungsabfall\n• Probleme mit dem Wärmemanagement\n• Einstellungen funktionieren möglicherweise nicht auf allen CPU-Typen (moderne HWP vs. Legacy)\n\nÄndern Sie dies nur, wenn Sie die Prozessor-Energieverwaltung verstehen.\n\nSind Sie sicher, dass Sie diese Einstellung ändern möchten?",
+  "Dialog_AdvancedPowerWarning_Message": "Warnung vor erweiterten Energieeinstellungen\n\nDiese Einstellung wird normalerweise nicht in den Windows-Energieoptionen angezeigt und erfordert Registrierungsänderungen für den Zugriff.\n\nEine falsche Änderung kann zu Folgendem führen:\n• Systeminstabilität oder unerwartetes Verhalten\n• Leistungsabfall\n• Probleme mit dem Wärmemanagement\n• Einstellungen funktionieren möglicherweise nicht auf allen CPU-Typen (moderne HWP vs. Legacy)\n\nÄndern Sie dies nur, wenn Sie die Prozessor-Energieverwaltung verstehen.\n\nSind Sie sicher, dass Sie diese Einstellung ändern möchten?",
   "Dialog_AdvancedPowerWarning_DontShowAgain": "Diese Warnung für erweiterte Energieeinstellungen nicht mehr anzeigen",
   "Button_Unlock": "Entsperren",
   "Common_ClickToUnlock": "Zum Entsperren klicken",
