--- a/src/Winhance.WPF/Localization/es.json
+++ b/src/Winhance.WPF/Localization/es.json
@@ -429,8 +429,8 @@
   "Setting_updates-policy-mode_Option_1": "Solo Actualizaciones de Seguridad (Recomendado)",
   "Setting_updates-policy-mode_Option_2": "Pausado por mucho tiempo (Despausar en Configuración)",
   "Setting_updates-policy-mode_Option_3": "Deshabilitado (NO Recomendado, Riesgo de Seguridad)",
-  "Setting_updates-policy-mode_OptionWarning_2": "⚠️ ADVERTENCIA: Pausar las actualizaciones por mucho tiempo deja tu sistema vulnerable a amenazas de seguridad. Úsalo bajo tu propio riesgo.",
-  "Setting_updates-policy-mode_OptionWarning_3": "⚠️ ADVERTENCIA: Deshabilitar las actualizaciones deja tu sistema vulnerable a amenazas de seguridad. Úsalo bajo tu propio riesgo.",
+  "Setting_updates-policy-mode_OptionWarning_2": "ADVERTENCIA: Pausar las actualizaciones por mucho tiempo deja tu sistema vulnerable a amenazas de seguridad. Úsalo bajo tu propio riesgo.",
+  "Setting_updates-policy-mode_OptionWarning_3": "ADVERTENCIA: Deshabilitar las actualizaciones deja tu sistema vulnerable a amenazas de seguridad. Úsalo bajo tu propio riesgo.",
   "Setting_updates-policy-mode_OptionTooltip_0": "Comportamiento predeterminado de Windows: actualizaciones automáticas habilitadas",
   "Setting_updates-policy-mode_OptionTooltip_1": "Solo instala actualizaciones de seguridad críticas, pospone las actualizaciones de características por 1 año",
   "Setting_updates-policy-mode_OptionTooltip_2": "Pausa todas las actualizaciones hasta 2051; despausar manualmente en la Configuración de Windows cuando sea necesario",
@@ -678,7 +678,7 @@
   "Setting_gaming-bits-service_Description": "Transfiere actualizaciones de Windows y descargas en segundo plano. Configurar en Manual permite que las actualizaciones funcionen mientras se evita la actividad constante en segundo plano durante el juego",
   "Setting_gaming-xbox-auth-manager_Name": "Administrador de Autenticación de Xbox Live",
   "Setting_gaming-xbox-auth-manager_Description": "Proporciona servicios de autenticación y autorización para Xbox Live. Seguro de deshabilitar si no usas Xbox Game Pass, juegos de Microsoft Store o funciones de Xbox",
-  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "⚠️ Deshabilitar impedirá que Xbox Game Pass y los juegos de Microsoft Store funcionen",
+  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "Deshabilitar impedirá que Xbox Game Pass y los juegos de Microsoft Store funcionen",
   "Setting_gaming-xbox-game-save_Name": "Guardado de Juegos de Xbox Live",
   "Setting_gaming-xbox-game-save_Description": "Sincroniza los guardados de juegos en la nube de Xbox Live. Solo es necesario para Xbox Game Pass y juegos de Microsoft Store con funciones de guardado en la nube",
   "Setting_gaming-xbox-networking_Name": "Servicio de Redes de Xbox Live",
@@ -1179,7 +1179,7 @@
   "Status_IdentifyingApps": "Identificando aplicaciones de Windows...",
   "Status_VerifyingApps": "Verificando qué aplicaciones están instaladas...",
   "Status_SortingApps": "Ordenando aplicaciones para mostrar...",
-  "Common_RestartRequired": "⚠️ Se requiere reiniciar el sistema para que los cambios surtan efecto",
+  "Common_RestartRequired": "Se requiere reiniciar el sistema para que los cambios surtan efecto",
   "Compatibility_Windows10Only": "Esta configuración solo se aplica a Windows 10",
   "Compatibility_Windows11Only": "Esta configuración solo se aplica a Windows 11",
   "Compatibility_MinBuild": "Requiere la compilación de Windows {0} o superior",
@@ -1430,7 +1430,7 @@
   "Setting_gaming-sysmain-service_Option_2": "Automático (Recomendado para HDD)",
   "Setting_power-plan-selection_Description": "Selecciona el plan de energía activo para tu sistema",
   "Dialog_AdvancedPowerWarning_Title": "Advertencia de Configuración Avanzada",
-  "Dialog_AdvancedPowerWarning_Message": "⚠️ Advertencia de Configuración Avanzada de Energía\n\nEsta configuración normalmente no está expuesta en las Opciones de Energía de Windows y requiere modificaciones del registro para acceder a ella.\n\nModificarla incorrectamente puede causar:\n• Inestabilidad del sistema o comportamiento inesperado\n• Degradación del rendimiento\n• Problemas de gestión térmica\n• Es posible que la configuración no funcione en todos los tipos de CPU (HWP moderno vs heredado)\n\nSolo cambia esto si comprendes la administración de energía del procesador.\n\n¿Estás seguro de que quieres modificar esta configuración?",
+  "Dialog_AdvancedPowerWarning_Message": "Advertencia de Configuración Avanzada de Energía\n\nEsta configuración normalmente no está expuesta en las Opciones de Energía de Windows y requiere modificaciones del registro para acceder a ella.\n\nModificarla incorrectamente puede causar:\n• Inestabilidad del sistema o comportamiento inesperado\n• Degradación del rendimiento\n• Problemas de gestión térmica\n• Es posible que la configuración no funcione en todos los tipos de CPU (HWP moderno vs heredado)\n\nSolo cambia esto si comprendes la administración de energía del procesador.\n\n¿Estás seguro de que quieres modificar esta configuración?",
   "Dialog_AdvancedPowerWarning_DontShowAgain": "No volver a mostrar esta advertencia para configuraciones avanzadas de energía",
   "Button_Unlock": "Desbloquear",
   "Common_ClickToUnlock": "Haz clic para desbloquear",
