--- a/src/Winhance.WPF/Localization/hi.json
+++ b/src/Winhance.WPF/Localization/hi.json
@@ -429,8 +429,8 @@
   "Setting_updates-policy-mode_Option_1": "केवल सुरक्षा अपडेट (अनुशंसित)",
   "Setting_updates-policy-mode_Option_2": "लंबे समय के लिए रोका गया (सेटिंग्स में फिर से शुरू करें)",
   "Setting_updates-policy-mode_Option_3": "अक्षम (अनुशंसित नहीं, सुरक्षा जोखिम)",
-  "Setting_updates-policy-mode_OptionWarning_2": "⚠️ चेतावनी: लंबे समय तक अपडेट रोकने से आपका सिस्टम सुरक्षा खतरों के प्रति संवेदनशील हो जाता है। अपने जोखिम पर उपयोग करें।",
-  "Setting_updates-policy-mode_OptionWarning_3": "⚠️ चेतावनी: अपडेट अक्षम करने से आपका सिस्टम सुरक्षा खतरों के प्रति संवेदनशील हो जाता है। अपने जोखिम पर उपयोग करें।",
+  "Setting_updates-policy-mode_OptionWarning_2": "चेतावनी: लंबे समय तक अपडेट रोकने से आपका सिस्टम सुरक्षा खतरों के प्रति संवेदनशील हो जाता है। अपने जोखिम पर उपयोग करें।",
+  "Setting_updates-policy-mode_OptionWarning_3": "चेतावनी: अपडेट अक्षम करने से आपका सिस्टम सुरक्षा खतरों के प्रति संवेदनशील हो जाता है। अपने जोखिम पर उपयोग करें।",
   "Setting_updates-policy-mode_OptionTooltip_0": "विंडोज डिफ़ॉल्ट व्यवहार - स्वचालित अपडेट सक्षम",
   "Setting_updates-policy-mode_OptionTooltip_1": "केवल महत्वपूर्ण सुरक्षा अपडेट इंस्टॉल करें, फ़ीचर अपडेट को 1 वर्ष के लिए स्थगित करें",
   "Setting_updates-policy-mode_OptionTooltip_2": "2051 तक सभी अपडेट रोकें - जब आवश्यक हो तो विंडोज सेटिंग्स में मैन्युअल रूप से फिर से शुरू करें",
@@ -678,7 +678,7 @@
   "Setting_gaming-bits-service_Description": "विंडोज अपडेट और डाउनलोड को पृष्ठभूमि में स्थानांतरित करता है। मैनुअल पर सेट करने से गेमिंग के दौरान लगातार पृष्ठभूमि गतिविधि को रोकते हुए अपडेट को काम करने की अनुमति मिलती है",
   "Setting_gaming-xbox-auth-manager_Name": "Xbox Live Auth Manager",
   "Setting_gaming-xbox-auth-manager_Description": "Xbox Live के लिए प्रमाणीकरण और प्राधिकरण सेवाएं प्रदान करता है। यदि आप Xbox गेम पास, Microsoft स्टोर गेम, या Xbox सुविधाओं का उपयोग नहीं करते हैं तो अक्षम करना सुरक्षित है",
-  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "⚠️ अक्षम करने से Xbox गेम पास और Microsoft स्टोर गेम काम करना बंद कर देंगे",
+  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "अक्षम करने से Xbox गेम पास और Microsoft स्टोर गेम काम करना बंद कर देंगे",
   "Setting_gaming-xbox-game-save_Name": "Xbox Live गेम सेव",
   "Setting_gaming-xbox-game-save_Description": "गेम सेव को Xbox Live क्लाउड से सिंक करता है। केवल Xbox गेम पास और Microsoft स्टोर गेम के लिए क्लाउड सेव सुविधाओं के साथ आवश्यक है।",
   "Setting_gaming-xbox-networking_Name": "Xbox Live नेटवर्किंग सेवा",
@@ -1179,7 +1179,7 @@
   "Status_IdentifyingApps": "विंडोज एप्लिकेशन पहचाने जा रहे हैं...",
   "Status_VerifyingApps": "कौन से एप्लिकेशन इंस्टॉल हैं, यह सत्यापित किया जा रहा है...",
   "Status_SortingApps": "प्रदर्शन के लिए एप्लिकेशन सॉर्ट किए जा रहे हैं...",
-  "Common_RestartRequired": "⚠️ परिवर्तनों को प्रभावी होने के लिए सिस्टम को फिर से शुरू करने की आवश्यकता है",
+  "Common_RestartRequired": "परिवर्तनों को प्रभावी होने के लिए सिस्टम को फिर से शुरू करने की आवश्यकता है",
   "Compatibility_Windows10Only": "यह सेटिंग केवल विंडोज 10 पर लागू होती है",
   "Compatibility_Windows11Only": "यह सेटिंग केवल विंडोज 11 पर लागू होती है",
   "Compatibility_MinBuild": "विंडोज बिल्ड {0} या उच्चतर की आवश्यकता है",
@@ -1430,7 +1430,7 @@
   "Setting_gaming-sysmain-service_Option_2": "स्वचालित (HDD के लिए अनुशंसित)",
   "Setting_power-plan-selection_Description": "अपने सिस्टम के लिए सक्रिय पावर प्लान चुनें",
   "Dialog_AdvancedPowerWarning_Title": "उन्नत सेटिंग चेतावनी",
-  "Dialog_AdvancedPowerWarning_Message": "⚠️ उन्नत पावर सेटिंग चेतावनी\n\nयह सेटिंग सामान्य रूप से विंडोज पावर विकल्पों में दिखाई नहीं देती है और इसे एक्सेस करने के लिए रजिस्ट्री संशोधनों की आवश्यकता होती है।\n\nइसे गलत तरीके से संशोधित करने से यह हो सकता है:\n• सिस्टम अस्थिरता या अप्रत्याशित व्यवहार\n• प्रदर्शन में गिरावट\n• थर्मल प्रबंधन समस्याएं\n• सेटिंग्स सभी CPU प्रकारों (आधुनिक HWP बनाम विरासत) पर काम नहीं कर सकती हैं\n\nकेवल तभी बदलें जब आप प्रोसेसर पावर प्रबंधन को समझते हों।\n\nक्या आप निश्चित रूप से इस सेटिंग को संशोधित करना चाहते हैं?",
+  "Dialog_AdvancedPowerWarning_Message": "उन्नत पावर सेटिंग चेतावनी\n\nयह सेटिंग सामान्य रूप से विंडोज पावर विकल्पों में दिखाई नहीं देती है और इसे एक्सेस करने के लिए रजिस्ट्री संशोधनों की आवश्यकता होती है।\n\nइसे गलत तरीके से संशोधित करने से यह हो सकता है:\n• सिस्टम अस्थिरता या अप्रत्याशित व्यवहार\n• प्रदर्शन में गिरावट\n• थर्मल प्रबंधन समस्याएं\n• सेटिंग्स सभी CPU प्रकारों (आधुनिक HWP बनाम विरासत) पर काम नहीं कर सकती हैं\n\nकेवल तभी बदलें जब आप प्रोसेसर पावर प्रबंधन को समझते हों।\n\nक्या आप निश्चित रूप से इस सेटिंग को संशोधित करना चाहते हैं?",
   "Dialog_AdvancedPowerWarning_DontShowAgain": "उन्नत पावर सेटिंग्स के लिए यह चेतावनी फिर से न दिखाएं",
   "Button_Unlock": "अनलॉक",
   "Common_ClickToUnlock": "अनलॉक करने के लिए क्लिक करें",
