--- a/src/Winhance.WPF/Localization/it.json
+++ b/src/Winhance.WPF/Localization/it.json
@@ -429,8 +429,8 @@
   "Setting_updates-policy-mode_Option_1": "Solo aggiornamenti di sicurezza (consigliato)",
   "Setting_updates-policy-mode_Option_2": "In pausa per molto tempo (riprendi nelle Impostazioni)",
   "Setting_updates-policy-mode_Option_3": "Disabilitato (NON consigliato, rischio per la sicurezza)",
-  "Setting_updates-policy-mode_OptionWarning_2": "⚠️ AVVISO: la sospensione degli aggiornamenti per un lungo periodo lascia il sistema vulnerabile alle minacce alla sicurezza. Usare a proprio rischio.",
-  "Setting_updates-policy-mode_OptionWarning_3": "⚠️ AVVISO: la disabilitazione degli aggiornamenti lascia il sistema vulnerabile alle minacce alla sicurezza. Usare a proprio rischio.",
+  "Setting_updates-policy-mode_OptionWarning_2": "AVVISO: la sospensione degli aggiornamenti per un lungo periodo lascia il sistema vulnerabile alle minacce alla sicurezza. Usare a proprio rischio.",
+  "Setting_updates-policy-mode_OptionWarning_3": "AVVISO: la disabilitazione degli aggiornamenti lascia il sistema vulnerabile alle minacce alla sicurezza. Usare a proprio rischio.",
   "Setting_updates-policy-mode_OptionTooltip_0": "Comportamento predefinito di Windows: aggiornamenti automatici abilitati",
   "Setting_updates-policy-mode_OptionTooltip_1": "Installa solo aggiornamenti di sicurezza critici, posticipa gli aggiornamenti delle funzionalità di 1 anno",
   "Setting_updates-policy-mode_OptionTooltip_2": "Sospendi tutti gli aggiornamenti fino al 2051: riprendi manualmente nelle Impostazioni di Windows quando necessario",
@@ -678,7 +678,7 @@
   "Setting_gaming-bits-service_Description": "Trasferisce gli aggiornamenti di Windows e i download in background. L'impostazione su Manuale consente agli aggiornamenti di funzionare evitando un'attività costante in background durante il gioco",
   "Setting_gaming-xbox-auth-manager_Name": "Gestione autenticazione Xbox Live",
   "Setting_gaming-xbox-auth-manager_Description": "Fornisce servizi di autenticazione e autorizzazione per Xbox Live. Sicuro da disabilitare se non si utilizzano Xbox Game Pass, giochi del Microsoft Store o funzionalità Xbox",
-  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "⚠️ La disabilitazione impedirà il funzionamento dei giochi Xbox Game Pass e Microsoft Store",
+  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "La disabilitazione impedirà il funzionamento dei giochi Xbox Game Pass e Microsoft Store",
   "Setting_gaming-xbox-game-save_Name": "Salvataggio partita Xbox Live",
   "Setting_gaming-xbox-game-save_Description": "Sincronizza i salvataggi delle partite nel cloud di Xbox Live. Necessario solo per i giochi Xbox Game Pass e Microsoft Store con funzionalità di salvataggio nel cloud",
   "Setting_gaming-xbox-networking_Name": "Servizio di rete Xbox Live",
@@ -1179,7 +1179,7 @@
   "Status_IdentifyingApps": "Identificazione delle applicazioni di Windows in corso...",
   "Status_VerifyingApps": "Verifica delle applicazioni installate in corso...",
   "Status_SortingApps": "Ordinamento delle applicazioni per la visualizzazione in corso...",
-  "Common_RestartRequired": "⚠️ Riavvio del sistema richiesto affinché le modifiche abbiano effetto",
+  "Common_RestartRequired": "Riavvio del sistema richiesto affinché le modifiche abbiano effetto",
   "Compatibility_Windows10Only": "Questa impostazione si applica solo a Windows 10",
   "Compatibility_Windows11Only": "Questa impostazione si applica solo a Windows 11",
   "Compatibility_MinBuild": "Richiede la build di Windows {0} o successiva",
@@ -1430,7 +1430,7 @@
   "Setting_gaming-sysmain-service_Option_2": "Automatico (consigliato per HDD)",
   "Setting_power-plan-selection_Description": "Seleziona la combinazione per il risparmio di energia attiva per il tuo sistema",
   "Dialog_AdvancedPowerWarning_Title": "Avviso di impostazione avanzata",
-  "Dialog_AdvancedPowerWarning_Message": "⚠️ Avviso di impostazione avanzata dell'alimentazione\n\nQuesta impostazione non è normalmente esposta nelle Opzioni risparmio energia di Windows e richiede modifiche al registro per accedervi.\n\nLa modifica errata può causare:\n• Instabilità del sistema o comportamento imprevisto\n• Degrado delle prestazioni\n• Problemi di gestione termica\n• Le impostazioni potrebbero non funzionare su tutti i tipi di CPU (HWP moderno vs legacy)\n\nModifica questo solo se comprendi la gestione dell'alimentazione del processore.\n\nSei sicuro di voler modificare questa impostazione?",
+  "Dialog_AdvancedPowerWarning_Message": "Avviso di impostazione avanzata dell'alimentazione\n\nQuesta impostazione non è normalmente esposta nelle Opzioni risparmio energia di Windows e richiede modifiche al registro per accedervi.\n\nLa modifica errata può causare:\n• Instabilità del sistema o comportamento imprevisto\n• Degrado delle prestazioni\n• Problemi di gestione termica\n• Le impostazioni potrebbero non funzionare su tutti i tipi di CPU (HWP moderno vs legacy)\n\nModifica questo solo se comprendi la gestione dell'alimentazione del processore.\n\nSei sicuro di voler modificare questa impostazione?",
   "Dialog_AdvancedPowerWarning_DontShowAgain": "Non mostrare più questo avviso per le impostazioni di alimentazione avanzate",
   "Button_Unlock": "Sblocca",
   "Common_ClickToUnlock": "Fai clic per sbloccare",
