--- a/src/Winhance.WPF/Localization/ja.json
+++ b/src/Winhance.WPF/Localization/ja.json
@@ -429,8 +429,8 @@
   "Setting_updates-policy-mode_Option_1": "セキュリティアップデートのみ（推奨）",
   "Setting_updates-policy-mode_Option_2": "長期間一時停止（設定で一時停止を解除）",
   "Setting_updates-policy-mode_Option_3": "無効（非推奨、セキュリティリスク）",
-  "Setting_updates-policy-mode_OptionWarning_2": "⚠️ 警告：アップデートを長期間一時停止すると、システムがセキュリティ脅威に対して脆弱になります。自己責任で使用してください。",
-  "Setting_updates-policy-mode_OptionWarning_3": "⚠️ 警告：アップデートを無効にすると、システムがセキュリティ脅威に対して脆弱になります。自己責任で使用してください。",
+  "Setting_updates-policy-mode_OptionWarning_2": "警告：アップデートを長期間一時停止すると、システムがセキュリティ脅威に対して脆弱になります。自己責任で使用してください。",
+  "Setting_updates-policy-mode_OptionWarning_3": "警告：アップデートを無効にすると、システムがセキュリティ脅威に対して脆弱になります。自己責任で使用してください。",
   "Setting_updates-policy-mode_OptionTooltip_0": "Windowsのデフォルト動作 - 自動アップデートが有効",
   "Setting_updates-policy-mode_OptionTooltip_1": "重要なセキュリティアップデートのみをインストールし、機能アップデートを1年間延期する",
   "Setting_updates-policy-mode_OptionTooltip_2": "2051年まで全てのアップデートを一時停止 - 必要なときにWindows設定で手動で一時停止を解除",
@@ -678,7 +678,7 @@
   "Setting_gaming-bits-service_Description": "バックグラウンドでWindowsアップデートとダウンロードを転送します。手動に設定すると、ゲーム中の一定のバックグラウンドアクティビティを防ぎながら、アップデートが機能するようになります。",
   "Setting_gaming-xbox-auth-manager_Name": "Xbox Live認証マネージャー",
   "Setting_gaming-xbox-auth-manager_Description": "Xbox Liveの認証および承認サービスを提供します。Xbox Game Pass、Microsoft Storeゲーム、またはXbox機能を使用しない場合は安全に無効にできます。",
-  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "⚠️ 無効にすると、Xbox Game PassとMicrosoft Storeゲームが機能しなくなります",
+  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "無効にすると、Xbox Game PassとMicrosoft Storeゲームが機能しなくなります",
   "Setting_gaming-xbox-game-save_Name": "Xbox Liveゲームセーブ",
   "Setting_gaming-xbox-game-save_Description": "ゲームセーブをXbox Liveクラウドに同期します。クラウドセーブ機能を備えたXbox Game PassおよびMicrosoft Storeゲームにのみ必要です。",
   "Setting_gaming-xbox-networking_Name": "Xbox Liveネットワークサービス",
@@ -1179,7 +1179,7 @@
   "Status_IdentifyingApps": "Windowsアプリケーションを識別中...",
   "Status_VerifyingApps": "インストールされているアプリケーションを確認中...",
   "Status_SortingApps": "表示用にアプリケーションを並べ替え中...",
-  "Common_RestartRequired": "⚠️ 変更を有効にするには、システムの再起動が必要です",
+  "Common_RestartRequired": "変更を有効にするには、システムの再起動が必要です",
   "Compatibility_Windows10Only": "この設定はWindows 10にのみ適用されます",
   "Compatibility_Windows11Only": "この設定はWindows 11にのみ適用されます",
   "Compatibility_MinBuild": "Windowsビルド{0}以降が必要です",
@@ -1430,7 +1430,7 @@
   "Setting_gaming-sysmain-service_Option_2": "自動（HDDに推奨）",
   "Setting_power-plan-selection_Description": "システムの有効な電源プランを選択します",
   "Dialog_AdvancedPowerWarning_Title": "詳細設定の警告",
-  "Dialog_AdvancedPowerWarning_Message": "⚠️ 詳細な電源設定の警告\n\nこの設定は通常Windowsの電源オプションには表示されず、アクセスするにはレジストリの変更が必要です。\n\n誤って変更すると、次の問題が発生する可能性があります：\n• システムの不安定性または予期しない動作\n• パフォーマンスの低下\n• 熱管理の問題\n• 設定がすべてのCPUタイプ（最新のHWP対レガシー）で機能しない可能性がある\n\nプロセッサの電源管理を理解している場合にのみ、これを変更してください。\n\nこの設定を変更してもよろしいですか？",
+  "Dialog_AdvancedPowerWarning_Message": "詳細な電源設定の警告\n\nこの設定は通常Windowsの電源オプションには表示されず、アクセスするにはレジストリの変更が必要です。\n\n誤って変更すると、次の問題が発生する可能性があります：\n• システムの不安定性または予期しない動作\n• パフォーマンスの低下\n• 熱管理の問題\n• 設定がすべてのCPUタイプ（最新のHWP対レガシー）で機能しない可能性がある\n\nプロセッサの電源管理を理解している場合にのみ、これを変更してください。\n\nこの設定を変更してもよろしいですか？",
   "Dialog_AdvancedPowerWarning_DontShowAgain": "詳細な電源設定について、この警告を再度表示しない",
   "Button_Unlock": "ロック解除",
   "Common_ClickToUnlock": "クリックしてロック解除",
