--- a/src/Winhance.WPF/Localization/lt.json
+++ b/src/Winhance.WPF/Localization/lt.json
@@ -678,7 +678,7 @@
   "Setting_gaming-bits-service_Description": "Perduoda Windows naujinimus ir atsisiuntimus fone. Nustatymas į rankinį leidžia naujinimams veikti, išvengiant nuolatinės foninės veiklos žaidimo metu",
   "Setting_gaming-xbox-auth-manager_Name": "Xbox Live autentifikavimo tvarkytuvė",
   "Setting_gaming-xbox-auth-manager_Description": "Suteikia autentifikavimo ir autorizavimo paslaugas Xbox Live. Saugiai išjungiama, jei nenaudojate Xbox Game Pass, Microsoft parduotuvės žaidimų ar Xbox funkcijų",
-  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "⚠️ Išjungus neveiks Xbox Game Pass ir Microsoft parduotuvės žaidimai",
+  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "Išjungus neveiks Xbox Game Pass ir Microsoft parduotuvės žaidimai",
   "Setting_gaming-xbox-game-save_Name": "Xbox Live žaidimų išsaugojimas",
   "Setting_gaming-xbox-game-save_Description": "Sinchronizuoja žaidimų išsaugojimus su Xbox Live debesimi. Reikalinga tik Xbox Game Pass ir Microsoft parduotuvės žaidimams su debesies išsaugojimo funkcijomis",
   "Setting_gaming-xbox-networking_Name": "Xbox Live tinklo paslauga",
@@ -1179,7 +1179,7 @@
   "Status_IdentifyingApps": "Identifikuojamos Windows programos...",
   "Status_VerifyingApps": "Tikrinama, kurios programos yra įdiegtos...",
   "Status_SortingApps": "Rūšiuojamos programos rodymui...",
-  "Common_RestartRequired": "⚠️ Norint, kad pakeitimai įsigaliotų, reikalingas sistemos perkrovimas",
+  "Common_RestartRequired": "Norint, kad pakeitimai įsigaliotų, reikalingas sistemos perkrovimas",
   "Compatibility_Windows10Only": "Šis nustatymas taikomas tik Windows 10",
   "Compatibility_Windows11Only": "Šis nustatymas taikomas tik Windows 11",
   "Compatibility_MinBuild": "Reikalinga Windows versija {0} arba naujesnė",
@@ -1430,7 +1430,7 @@
   "Setting_gaming-sysmain-service_Option_2": "Automatinis (rekomenduojama HDD)",
   "Setting_power-plan-selection_Description": "Pasirinkite aktyvų energijos planą savo sistemai",
   "Dialog_AdvancedPowerWarning_Title": "Išplėstinio nustatymo įspėjimas",
-  "Dialog_AdvancedPowerWarning_Message": "⚠️ Išplėstinio energijos nustatymo įspėjimas\n\nŠis nustatymas paprastai nerodomas Windows energijos parinktyse ir reikalauja registro modifikacijų, kad būtų pasiekiamas.\n\nNetinkamai jį modifikavus, gali kilti:\n• Sistemos nestabilumas ar netikėta elgsena\n• Našumo pablogėjimas\n• Šilumos valdymo problemos\n• Nustatymai gali neveikti visų tipų procesoriuose (šiuolaikiniuose HWP ir senuosiuose)\n\nKeiskite tai tik jei suprantate procesoriaus energijos valdymą.\n\nAr tikrai norite modifikuoti šį nustatymą?",
+  "Dialog_AdvancedPowerWarning_Message": "Išplėstinio energijos nustatymo įspėjimas\n\nŠis nustatymas paprastai nerodomas Windows energijos parinktyse ir reikalauja registro modifikacijų, kad būtų pasiekiamas.\n\nNetinkamai jį modifikavus, gali kilti:\n• Sistemos nestabilumas ar netikėta elgsena\n• Našumo pablogėjimas\n• Šilumos valdymo problemos\n• Nustatymai gali neveikti visų tipų procesoriuose (šiuolaikiniuose HWP ir senuosiuose)\n\nKeiskite tai tik jei suprantate procesoriaus energijos valdymą.\n\nAr tikrai norite modifikuoti šį nustatymą?",
   "Dialog_AdvancedPowerWarning_DontShowAgain": "Daugiau nerodyti šio įspėjimo dėl išplėstinių energijos nustatymų",
   "Button_Unlock": "Atrakinti",
   "Common_ClickToUnlock": "Spustelėkite, kad atrakintumėte",
