--- a/src/Winhance.WPF/Localization/pl.json
+++ b/src/Winhance.WPF/Localization/pl.json
@@ -429,8 +429,8 @@
   "Setting_updates-policy-mode_Option_1": "Tylko aktualizacje zabezpieczeń (zalecane)",
   "Setting_updates-policy-mode_Option_2": "Wstrzymane na długi czas (wznów w Ustawieniach)",
   "Setting_updates-policy-mode_Option_3": "Wyłączone (NIEZALECANE, ryzyko bezpieczeństwa)",
-  "Setting_updates-policy-mode_OptionWarning_2": "⚠️ OSTRZEŻENIE: Wstrzymanie aktualizacji na długi czas naraża system na zagrożenia bezpieczeństwa. Używaj na własne ryzyko.",
-  "Setting_updates-policy-mode_OptionWarning_3": "⚠️ OSTRZEŻENIE: Wyłączenie aktualizacji naraża system na zagrożenia bezpieczeństwa. Używaj na własne ryzyko.",
+  "Setting_updates-policy-mode_OptionWarning_2": "OSTRZEŻENIE: Wstrzymanie aktualizacji na długi czas naraża system na zagrożenia bezpieczeństwa. Używaj na własne ryzyko.",
+  "Setting_updates-policy-mode_OptionWarning_3": "OSTRZEŻENIE: Wyłączenie aktualizacji naraża system na zagrożenia bezpieczeństwa. Używaj na własne ryzyko.",
   "Setting_updates-policy-mode_OptionTooltip_0": "Domyślne zachowanie systemu Windows – automatyczne aktualizacje włączone",
   "Setting_updates-policy-mode_OptionTooltip_1": "Instaluj tylko krytyczne aktualizacje zabezpieczeń, odraczaj aktualizacje funkcji o 1 rok",
   "Setting_updates-policy-mode_OptionTooltip_2": "Wstrzymaj wszystkie aktualizacje do 2051 roku – wznów ręcznie w Ustawieniach Windows, gdy będzie to potrzebne",
@@ -678,7 +678,7 @@
   "Setting_gaming-bits-service_Description": "Transferuje aktualizacje systemu Windows i pobrania w tle. Ustawienie na Ręczne pozwala na działanie aktualizacji, jednocześnie zapobiegając stałej aktywności w tle podczas grania",
   "Setting_gaming-xbox-auth-manager_Name": "Menedżer uwierzytelniania Xbox Live",
   "Setting_gaming-xbox-auth-manager_Description": "Zapewnia usługi uwierzytelniania i autoryzacji dla Xbox Live. Bezpieczne do wyłączenia, jeśli nie używasz Xbox Game Pass, gier z Microsoft Store ani funkcji Xbox",
-  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "⚠️ Wyłączenie uniemożliwi działanie Xbox Game Pass i gier z Microsoft Store",
+  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "Wyłączenie uniemożliwi działanie Xbox Game Pass i gier z Microsoft Store",
   "Setting_gaming-xbox-game-save_Name": "Zapisy gier Xbox Live",
   "Setting_gaming-xbox-game-save_Description": "Synchronizuje zapisy gier z chmurą Xbox Live. Potrzebne tylko dla Xbox Game Pass i gier z Microsoft Store z funkcją zapisu w chmurze",
   "Setting_gaming-xbox-networking_Name": "Usługa sieciowa Xbox Live",
@@ -1179,7 +1179,7 @@
   "Status_IdentifyingApps": "Identyfikowanie aplikacji systemu Windows...",
   "Status_VerifyingApps": "Weryfikacja zainstalowanych aplikacji...",
   "Status_SortingApps": "Sortowanie aplikacji do wyświetlenia...",
-  "Common_RestartRequired": "⚠️ Wymagane ponowne uruchomienie systemu, aby zmiany weszły w życie",
+  "Common_RestartRequired": "Wymagane ponowne uruchomienie systemu, aby zmiany weszły w życie",
   "Compatibility_Windows10Only": "To ustawienie dotyczy tylko systemu Windows 10",
   "Compatibility_Windows11Only": "To ustawienie dotyczy tylko systemu Windows 11",
   "Compatibility_MinBuild": "Wymaga kompilacji Windows {0} lub nowszej",
@@ -1430,7 +1430,7 @@
   "Setting_gaming-sysmain-service_Option_2": "Automatyczne (zalecane dla HDD)",
   "Setting_power-plan-selection_Description": "Wybierz aktywny plan zasilania dla swojego systemu",
   "Dialog_AdvancedPowerWarning_Title": "Ostrzeżenie o zaawansowanych ustawieniach zasilania",
-  "Dialog_AdvancedPowerWarning_Message": "⚠️ Ostrzeżenie o zaawansowanych ustawieniach zasilania\n\nTo ustawienie nie jest normalnie dostępne w opcjach zasilania systemu Windows i wymaga modyfikacji rejestru, aby uzyskać do niego dostęp.\n\nNieprawidłowa modyfikacja może spowodować:\n• Niestabilność systemu lub nieoczekiwane zachowanie\n• Degradację wydajności\n• Problemy z zarządzaniem temperaturą\n• Ustawienia mogą nie działać na wszystkich typach procesorów (nowoczesne HWP vs starsze)\n\nZmieniaj to tylko, jeśli rozumiesz zarządzanie energią procesora.\n\nCzy na pewno chcesz zmodyfikować to ustawienie?",
+  "Dialog_AdvancedPowerWarning_Message": "Ostrzeżenie o zaawansowanych ustawieniach zasilania\n\nTo ustawienie nie jest normalnie dostępne w opcjach zasilania systemu Windows i wymaga modyfikacji rejestru, aby uzyskać do niego dostęp.\n\nNieprawidłowa modyfikacja może spowodować:\n• Niestabilność systemu lub nieoczekiwane zachowanie\n• Degradację wydajności\n• Problemy z zarządzaniem temperaturą\n• Ustawienia mogą nie działać na wszystkich typach procesorów (nowoczesne HWP vs starsze)\n\nZmieniaj to tylko, jeśli rozumiesz zarządzanie energią procesora.\n\nCzy na pewno chcesz zmodyfikować to ustawienie?",
   "Dialog_AdvancedPowerWarning_DontShowAgain": "Nie pokazuj ponownie tego ostrzeżenia dla zaawansowanych ustawień zasilania",
   "Button_Unlock": "Odblokuj",
   "Common_ClickToUnlock": "Kliknij, aby odblokować",
