--- a/src/Winhance.WPF/Localization/pt-BR.json
+++ b/src/Winhance.WPF/Localization/pt-BR.json
@@ -429,8 +429,8 @@
   "Setting_updates-policy-mode_Option_1": "Apenas Atualizações de Segurança (Recomendado)",
   "Setting_updates-policy-mode_Option_2": "Pausado por um longo tempo (Retomar nas Configurações)",
   "Setting_updates-policy-mode_Option_3": "Desativado (NÃO Recomendado, Risco de Segurança)",
-  "Setting_updates-policy-mode_OptionWarning_2": "⚠️ AVISO: Pausar as atualizações por um longo tempo deixa seu sistema vulnerável a ameaças de segurança. Use por sua conta e risco.",
-  "Setting_updates-policy-mode_OptionWarning_3": "⚠️ AVISO: Desativar as atualizações deixa seu sistema vulnerável a ameaças de segurança. Use por sua conta e risco.",
+  "Setting_updates-policy-mode_OptionWarning_2": "AVISO: Pausar as atualizações por um longo tempo deixa seu sistema vulnerável a ameaças de segurança. Use por sua conta e risco.",
+  "Setting_updates-policy-mode_OptionWarning_3": "AVISO: Desativar as atualizações deixa seu sistema vulnerável a ameaças de segurança. Use por sua conta e risco.",
   "Setting_updates-policy-mode_OptionTooltip_0": "Comportamento padrão do Windows - atualizações automáticas ativadas",
   "Setting_updates-policy-mode_OptionTooltip_1": "Instalar apenas atualizações de segurança críticas, adiar atualizações de recursos por 1 ano",
   "Setting_updates-policy-mode_OptionTooltip_2": "Pausar todas as atualizações até 2051 - retomar manualmente nas Configurações do Windows quando necessário",
@@ -678,7 +678,7 @@
   "Setting_gaming-bits-service_Description": "Transfere as Atualizações do Windows e downloads em segundo plano. Definir como Manual permite que as atualizações funcionem, evitando atividades constantes em segundo plano durante os jogos",
   "Setting_gaming-xbox-auth-manager_Name": "Gerenciador de Autenticação do Xbox Live",
   "Setting_gaming-xbox-auth-manager_Description": "Fornece serviços de autenticação e autorização para o Xbox Live. Seguro para desativar se você não usa o Xbox Game Pass, jogos da Microsoft Store ou recursos do Xbox",
-  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "⚠️ Desativar impedirá que o Xbox Game Pass e os jogos da Microsoft Store funcionem",
+  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "Desativar impedirá que o Xbox Game Pass e os jogos da Microsoft Store funcionem",
   "Setting_gaming-xbox-game-save_Name": "Salvamento de Jogo do Xbox Live",
   "Setting_gaming-xbox-game-save_Description": "Sincroniza os salvamentos de jogos com a nuvem do Xbox Live. Necessário apenas para jogos do Xbox Game Pass e da Microsoft Store com recursos de salvamento na nuvem",
   "Setting_gaming-xbox-networking_Name": "Serviço de Rede do Xbox Live",
@@ -1179,7 +1179,7 @@
   "Status_IdentifyingApps": "Identificando aplicativos do Windows...",
   "Status_VerifyingApps": "Verificando quais aplicativos estão instalados...",
   "Status_SortingApps": "Ordenando aplicativos para exibição...",
-  "Common_RestartRequired": "⚠️ Reinicialização do sistema necessária para que as alterações entrem em vigor",
+  "Common_RestartRequired": "Reinicialização do sistema necessária para que as alterações entrem em vigor",
   "Compatibility_Windows10Only": "Esta configuração se aplica apenas ao Windows 10",
   "Compatibility_Windows11Only": "Esta configuração se aplica apenas ao Windows 11",
   "Compatibility_MinBuild": "Requer a compilação {0} do Windows ou superior",
@@ -1430,7 +1430,7 @@
   "Setting_gaming-sysmain-service_Option_2": "Automático (Recomendado para HDD)",
   "Setting_power-plan-selection_Description": "Selecione o plano de energia ativo para o seu sistema",
   "Dialog_AdvancedPowerWarning_Title": "Aviso de Configuração Avançada",
-  "Dialog_AdvancedPowerWarning_Message": "⚠️ Aviso de Configuração de Energia Avançada\n\nEsta configuração normalmente não é exposta nas Opções de Energia do Windows e requer modificações no registro para ser acessada.\n\nA modificação incorreta pode causar:\n• Instabilidade do sistema ou comportamento inesperado\n• Degradação do desempenho\n• Problemas de gerenciamento térmico\n• As configurações podem não funcionar em todos os tipos de CPU (HWP moderno vs. legado)\n\nAltere isso apenas se você entender o gerenciamento de energia do processador.\n\nTem certeza de que deseja modificar esta configuração?",
+  "Dialog_AdvancedPowerWarning_Message": "Aviso de Configuração de Energia Avançada\n\nEsta configuração normalmente não é exposta nas Opções de Energia do Windows e requer modificações no registro para ser acessada.\n\nA modificação incorreta pode causar:\n• Instabilidade do sistema ou comportamento inesperado\n• Degradação do desempenho\n• Problemas de gerenciamento térmico\n• As configurações podem não funcionar em todos os tipos de CPU (HWP moderno vs. legado)\n\nAltere isso apenas se você entender o gerenciamento de energia do processador.\n\nTem certeza de que deseja modificar esta configuração?",
   "Dialog_AdvancedPowerWarning_DontShowAgain": "Não mostrar este aviso novamente para configurações avançadas de energia",
   "Button_Unlock": "Desbloquear",
   "Common_ClickToUnlock": "Clique para desbloquear",
