--- a/src/Winhance.WPF/Localization/vi.json
+++ b/src/Winhance.WPF/Localization/vi.json
@@ -429,8 +429,8 @@
   "Setting_updates-policy-mode_Option_1": "Chỉ cập nhật bảo mật (Được khuyến nghị)",
   "Setting_updates-policy-mode_Option_2": "Tạm dừng trong một thời gian dài (Bỏ tạm dừng trong Cài đặt)",
   "Setting_updates-policy-mode_Option_3": "Bị vô hiệu hóa (KHÔNG được khuyến nghị, Rủi ro bảo mật)",
-  "Setting_updates-policy-mode_OptionWarning_2": "⚠️ CẢNH BÁO: Tạm dừng cập nhật trong một thời gian dài khiến hệ thống của bạn dễ bị tấn công bởi các mối đe dọa bảo mật. Sử dụng có nguy cơ của riêng bạn.",
-  "Setting_updates-policy-mode_OptionWarning_3": "⚠️ CẢNH BÁO: Vô hiệu hóa các bản cập nhật khiến hệ thống của bạn dễ bị tấn công bởi các mối đe dọa bảo mật. Sử dụng có nguy cơ của riêng bạn.",
+  "Setting_updates-policy-mode_OptionWarning_2": "CẢNH BÁO: Tạm dừng cập nhật trong một thời gian dài khiến hệ thống của bạn dễ bị tấn công bởi các mối đe dọa bảo mật. Sử dụng có nguy cơ của riêng bạn.",
+  "Setting_updates-policy-mode_OptionWarning_3": "CẢNH BÁO: Vô hiệu hóa các bản cập nhật khiến hệ thống của bạn dễ bị tấn công bởi các mối đe dọa bảo mật. Sử dụng có nguy cơ của riêng bạn.",
   "Setting_updates-policy-mode_OptionTooltip_0": "Hành vi mặc định của Windows - cập nhật tự động được bật",
   "Setting_updates-policy-mode_OptionTooltip_1": "Chỉ cài đặt các bản cập nhật bảo mật quan trọng, trì hoãn các bản cập nhật tính năng 1 năm",
   "Setting_updates-policy-mode_OptionTooltip_2": "Tạm dừng tất cả các bản cập nhật cho đến năm 2051 - bỏ tạm dừng thủ công trong Cài đặt Windows khi cần",
@@ -678,7 +678,7 @@
   "Setting_gaming-bits-service_Description": "Truyền các bản cập nhật Windows và tải xuống trong nền. Việc đặt thành Thủ công cho phép các bản cập nhật hoạt động trong khi ngăn chặn hoạt động nền liên tục trong khi chơi game",
   "Setting_gaming-xbox-auth-manager_Name": "Trình quản lý xác thực Xbox Live",
   "Setting_gaming-xbox-auth-manager_Description": "Cung cấp các dịch vụ xác thực và ủy quyền cho Xbox Live. An toàn để tắt nếu bạn không sử dụng Xbox Game Pass, các trò chơi trên Microsoft Store hoặc các tính năng Xbox",
-  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "⚠️ Việc tắt sẽ ngăn Xbox Game Pass và các trò chơi trên Microsoft Store hoạt động",
+  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "Việc tắt sẽ ngăn Xbox Game Pass và các trò chơi trên Microsoft Store hoạt động",
   "Setting_gaming-xbox-game-save_Name": "Lưu trò chơi Xbox Live",
   "Setting_gaming-xbox-game-save_Description": "Đồng bộ hóa các bản lưu trò chơi với đám mây Xbox Live. Chỉ cần thiết cho Xbox Game Pass và các trò chơi trên Microsoft Store có tính năng lưu trữ đám mây",
   "Setting_gaming-xbox-networking_Name": "Dịch vụ mạng Xbox Live",
@@ -1179,7 +1179,7 @@
   "Status_IdentifyingApps": "Đang xác định các ứng dụng Windows...",
   "Status_VerifyingApps": "Đang xác minh những ứng dụng nào đã được cài đặt...",
   "Status_SortingApps": "Đang sắp xếp các ứng dụng để hiển thị...",
-  "Common_RestartRequired": "⚠️ Cần khởi động lại hệ thống để các thay đổi có hiệu lực",
+  "Common_RestartRequired": "Cần khởi động lại hệ thống để các thay đổi có hiệu lực",
   "Compatibility_Windows10Only": "Cài đặt này chỉ áp dụng cho Windows 10",
   "Compatibility_Windows11Only": "Cài đặt này chỉ áp dụng cho Windows 11",
   "Compatibility_MinBuild": "Yêu cầu bản dựng Windows {0} trở lên",
@@ -1430,7 +1430,7 @@
   "Setting_gaming-sysmain-service_Option_2": "Tự động (Được khuyến nghị cho HDD)",
   "Setting_power-plan-selection_Description": "Chọn gói năng lượng đang hoạt động cho hệ thống của bạn",
   "Dialog_AdvancedPowerWarning_Title": "Cảnh báo cài đặt nâng cao",
-  "Dialog_AdvancedPowerWarning_Message": "⚠️ Cảnh báo cài đặt năng lượng nâng cao\n\nCài đặt này thường không được hiển thị trong Tùy chọn nguồn của Windows và yêu cầu sửa đổi sổ đăng ký để truy cập.\n\nSửa đổi không chính xác có thể gây ra:\n• Mất ổn định hệ thống hoặc hành vi không mong muốn\n• Giảm hiệu suất\n• Các vấn đề quản lý nhiệt\n• Cài đặt có thể không hoạt động trên tất cả các loại CPU (HWP hiện đại so với cũ)\n\nChỉ thay đổi điều này nếu bạn hiểu về quản lý năng lượng của bộ xử lý.\n\nBạn có chắc chắn muốn sửa đổi cài đặt này không?",
+  "Dialog_AdvancedPowerWarning_Message": "Cảnh báo cài đặt năng lượng nâng cao\n\nCài đặt này thường không được hiển thị trong Tùy chọn nguồn của Windows và yêu cầu sửa đổi sổ đăng ký để truy cập.\n\nSửa đổi không chính xác có thể gây ra:\n• Mất ổn định hệ thống hoặc hành vi không mong muốn\n• Giảm hiệu suất\n• Các vấn đề quản lý nhiệt\n• Cài đặt có thể không hoạt động trên tất cả các loại CPU (HWP hiện đại so với cũ)\n\nChỉ thay đổi điều này nếu bạn hiểu về quản lý năng lượng của bộ xử lý.\n\nBạn có chắc chắn muốn sửa đổi cài đặt này không?",
   "Dialog_AdvancedPowerWarning_DontShowAgain": "Không hiển thị lại cảnh báo này cho các cài đặt năng lượng nâng cao",
   "Button_Unlock": "Mở khóa",
   "Common_ClickToUnlock": "Nhấp để mở khóa",
