--- a/src/Winhance.UI/Features/Common/Localization/cs.json
+++ b/src/Winhance.UI/Features/Common/Localization/cs.json
@@ -442,8 +442,8 @@
   "Setting_updates-policy-mode_Option_1": "Pouze bezpečnostní aktualizace (doporučeno)",
   "Setting_updates-policy-mode_Option_2": "Pozastaveno na dlouhou dobu (obnovit v Nastavení)",
   "Setting_updates-policy-mode_Option_3": "Zakázáno (NEDOPORUČUJE SE, bezpečnostní riziko)",
-  "Setting_updates-policy-mode_OptionWarning_2": "⚠️ VAROVÁNÍ: Pozastavení aktualizací na dlouhou dobu zanechává váš systém zranitelný vůči bezpečnostním hrozbám. Používejte na vlastní nebezpečí.",
-  "Setting_updates-policy-mode_OptionWarning_3": "⚠️ VAROVÁNÍ: Zakázání aktualizací zanechává váš systém zranitelný vůči bezpečnostním hrozbám. Používejte na vlastní nebezpečí.",
+  "Setting_updates-policy-mode_OptionWarning_2": "VAROVÁNÍ: Pozastavení aktualizací na dlouhou dobu zanechává váš systém zranitelný vůči bezpečnostním hrozbám. Používejte na vlastní nebezpečí.",
+  "Setting_updates-policy-mode_OptionWarning_3": "VAROVÁNÍ: Zakázání aktualizací zanechává váš systém zranitelný vůči bezpečnostním hrozbám. Používejte na vlastní nebezpečí.",
   "Setting_updates-policy-mode_OptionTooltip_0": "Výchozí chování Windows - automatické aktualizace povoleny",
   "Setting_updates-policy-mode_OptionTooltip_1": "Instalovat pouze kritické bezpečnostní aktualizace, odložit aktualizace funkcí o 1 rok",
   "Setting_updates-policy-mode_OptionTooltip_2": "Pozastavit všechny aktualizace do roku 2051 - v případě potřeby ručně obnovit v Nastavení Windows",
@@ -691,7 +691,7 @@
   "Setting_gaming-bits-service_Description": "Přenáší aktualizace Windows a stahuje na pozadí. Nastavení na Ručně umožňuje fungování aktualizací a zároveň zabraňuje neustálé aktivitě na pozadí během hraní",
   "Setting_gaming-xbox-auth-manager_Name": "Správce ověřování Xbox Live",
   "Setting_gaming-xbox-auth-manager_Description": "Poskytuje ověřovací a autorizační služby pro Xbox Live. Bezpečné zakázat, pokud nepoužíváte Xbox Game Pass, hry z Microsoft Store nebo funkce Xbox",
-  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "⚠️ Vypnutí zabrání fungování her z Xbox Game Pass a Microsoft Store",
+  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "Vypnutí zabrání fungování her z Xbox Game Pass a Microsoft Store",
   "Setting_gaming-xbox-game-save_Name": "Ukládání her Xbox Live",
   "Setting_gaming-xbox-game-save_Description": "Synchronizuje uložené hry do cloudu Xbox Live. Potřebné pouze pro hry z Xbox Game Pass a Microsoft Store s funkcí cloudového ukládání",
   "Setting_gaming-xbox-networking_Name": "Síťová služba Xbox Live",
@@ -1204,7 +1204,7 @@
   "Status_IdentifyingApps": "Identifikace aplikací Windows...",
   "Status_VerifyingApps": "Ověřování, které aplikace jsou nainstalovány...",
   "Status_SortingApps": "Třídění aplikací pro zobrazení...",
-  "Common_RestartRequired": "⚠️ Pro projevení změn je nutný restart systému",
+  "Common_RestartRequired": "Pro projevení změn je nutný restart systému",
   "Compatibility_Windows10Only": "Toto nastavení platí pouze pro Windows 10",
   "Compatibility_Windows11Only": "Toto nastavení platí pouze pro Windows 11",
   "Compatibility_MinBuild": "Vyžaduje sestavení Windows {0} nebo vyšší",
