--- a/src/Winhance.UI/Features/Common/Localization/de.json
+++ b/src/Winhance.UI/Features/Common/Localization/de.json
@@ -442,8 +442,8 @@
   "Setting_updates-policy-mode_Option_1": "Nur Sicherheitsupdates (Empfohlen)",
   "Setting_updates-policy-mode_Option_2": "Für lange Zeit angehalten (in Einstellungen fortsetzen)",
   "Setting_updates-policy-mode_Option_3": "Deaktiviert (NICHT empfohlen, Sicherheitsrisiko)",
-  "Setting_updates-policy-mode_OptionWarning_2": "⚠️ WARNUNG: Das Anhalten von Updates für eine lange Zeit macht Ihr System anfällig für Sicherheitsbedrohungen. Verwendung auf eigene Gefahr.",
-  "Setting_updates-policy-mode_OptionWarning_3": "⚠️ WARNUNG: Das Deaktivieren von Updates macht Ihr System anfällig für Sicherheitsbedrohungen. Verwendung auf eigene Gefahr.",
+  "Setting_updates-policy-mode_OptionWarning_2": "WARNUNG: Das Anhalten von Updates für eine lange Zeit macht Ihr System anfällig für Sicherheitsbedrohungen. Verwendung auf eigene Gefahr.",
+  "Setting_updates-policy-mode_OptionWarning_3": "WARNUNG: Das Deaktivieren von Updates macht Ihr System anfällig für Sicherheitsbedrohungen. Verwendung auf eigene Gefahr.",
   "Setting_updates-policy-mode_OptionTooltip_0": "Standardverhalten von Windows - automatische Updates aktiviert",
   "Setting_updates-policy-mode_OptionTooltip_1": "Nur kritische Sicherheitsupdates installieren, Funktionsupdates um 1 Jahr verschieben",
   "Setting_updates-policy-mode_OptionTooltip_2": "Alle Updates bis 2051 anhalten - manuell in den Windows-Einstellungen fortsetzen, wenn nötig",
@@ -691,7 +691,7 @@
   "Setting_gaming-bits-service_Description": "Überträgt Windows-Updates und Downloads im Hintergrund. Das Setzen auf Manuell ermöglicht, dass Updates funktionieren, während ständige Hintergrundaktivitäten während des Spielens vermieden werden",
   "Setting_gaming-xbox-auth-manager_Name": "Xbox Live-Authentifizierungs-Manager",
   "Setting_gaming-xbox-auth-manager_Description": "Bietet Authentifizierungs- und Autorisierungsdienste für Xbox Live. Sicher zu deaktivieren, wenn Sie Xbox Game Pass, Microsoft Store-Spiele oder Xbox-Funktionen nicht verwenden",
-  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "⚠️ Das Deaktivieren verhindert, dass Xbox Game Pass- und Microsoft Store-Spiele funktionieren",
+  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "Das Deaktivieren verhindert, dass Xbox Game Pass- und Microsoft Store-Spiele funktionieren",
   "Setting_gaming-xbox-game-save_Name": "Xbox Live Game Save",
   "Setting_gaming-xbox-game-save_Description": "Synchronisiert Spielstände mit der Xbox Live-Cloud. Nur für Xbox Game Pass- und Microsoft Store-Spiele mit Cloud-Speicherfunktionen erforderlich",
   "Setting_gaming-xbox-networking_Name": "Xbox Live-Netzwerkdienst",
@@ -1204,7 +1204,7 @@
   "Status_IdentifyingApps": "Windows-Anwendungen werden identifiziert...",
   "Status_VerifyingApps": "Es wird überprüft, welche Anwendungen installiert sind...",
   "Status_SortingApps": "Anwendungen werden zur Anzeige sortiert...",
-  "Common_RestartRequired": "⚠️ Systemneustart erforderlich, damit die Änderungen wirksam werden",
+  "Common_RestartRequired": "Systemneustart erforderlich, damit die Änderungen wirksam werden",
   "Compatibility_Windows10Only": "Diese Einstellung gilt nur für Windows 10",
   "Compatibility_Windows11Only": "Diese Einstellung gilt nur für Windows 11",
   "Compatibility_MinBuild": "Erfordert Windows Build {0} oder höher",
