--- a/src/Winhance.UI/Features/Common/Localization/fr.json
+++ b/src/Winhance.UI/Features/Common/Localization/fr.json
@@ -442,8 +442,8 @@
   "Setting_updates-policy-mode_Option_1": "Mises à jour de sécurité uniquement (recommandé)",
   "Setting_updates-policy-mode_Option_2": "Suspendu pendant une longue période (réactiver dans les paramètres)",
   "Setting_updates-policy-mode_Option_3": "Désactivé (NON recommandé, risque de sécurité)",
-  "Setting_updates-policy-mode_OptionWarning_2": "⚠️ AVERTISSEMENT : La suspension des mises à jour pendant une longue période expose votre système à des menaces de sécurité. Utilisez à vos risques et périls.",
-  "Setting_updates-policy-mode_OptionWarning_3": "⚠️ AVERTISSEMENT : La désactivation des mises à jour expose votre système à des menaces de sécurité. Utilisez à vos risques et périls.",
+  "Setting_updates-policy-mode_OptionWarning_2": "AVERTISSEMENT : La suspension des mises à jour pendant une longue période expose votre système à des menaces de sécurité. Utilisez à vos risques et périls.",
+  "Setting_updates-policy-mode_OptionWarning_3": "AVERTISSEMENT : La désactivation des mises à jour expose votre système à des menaces de sécurité. Utilisez à vos risques et périls.",
   "Setting_updates-policy-mode_OptionTooltip_0": "Comportement par défaut de Windows - mises à jour automatiques activées",
   "Setting_updates-policy-mode_OptionTooltip_1": "Installer uniquement les mises à jour de sécurité critiques, reporter les mises à jour de fonctionnalités d'un an",
   "Setting_updates-policy-mode_OptionTooltip_2": "Suspendre toutes les mises à jour jusqu'en 2051 - réactiver manuellement dans les paramètres Windows si nécessaire",
@@ -691,7 +691,7 @@
   "Setting_gaming-bits-service_Description": "Transfère les mises à jour Windows et les téléchargements en arrière-plan. Le réglage sur Manuel permet aux mises à jour de fonctionner tout en empêchant une activité d'arrière-plan constante pendant le jeu",
   "Setting_gaming-xbox-auth-manager_Name": "Gestionnaire d'authentification Xbox Live",
   "Setting_gaming-xbox-auth-manager_Description": "Fournit des services d'authentification et d'autorisation pour Xbox Live. Sûr à désactiver si vous n'utilisez pas de jeux Xbox Game Pass, de jeux du Microsoft Store ou de fonctionnalités Xbox",
-  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "⚠️ La désactivation empêchera les jeux Xbox Game Pass et Microsoft Store de fonctionner",
+  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "La désactivation empêchera les jeux Xbox Game Pass et Microsoft Store de fonctionner",
   "Setting_gaming-xbox-game-save_Name": "Sauvegarde de jeu Xbox Live",
   "Setting_gaming-xbox-game-save_Description": "Synchronise les sauvegardes de jeu sur le cloud Xbox Live. Uniquement nécessaire pour les jeux Xbox Game Pass et Microsoft Store avec des fonctionnalités de sauvegarde dans le cloud",
   "Setting_gaming-xbox-networking_Name": "Service de mise en réseau Xbox Live",
@@ -1204,7 +1204,7 @@
   "Status_IdentifyingApps": "Identification des applications Windows...",
   "Status_VerifyingApps": "Vérification des applications installées...",
   "Status_SortingApps": "Tri des applications pour l'affichage...",
-  "Common_RestartRequired": "⚠️ Redémarrage du système requis pour que les modifications prennent effet",
+  "Common_RestartRequired": "Redémarrage du système requis pour que les modifications prennent effet",
   "Compatibility_Windows10Only": "Ce paramètre s'applique uniquement à Windows 10",
   "Compatibility_Windows11Only": "Ce paramètre s'applique uniquement à Windows 11",
   "Compatibility_MinBuild": "Nécessite la version {0} de Windows ou une version ultérieure",
