--- a/src/Winhance.UI/Features/Common/Localization/hu.json
+++ b/src/Winhance.UI/Features/Common/Localization/hu.json
@@ -442,8 +442,8 @@
   "Setting_updates-policy-mode_Option_1": "Csak biztonsági frissítések (ajánlott)",
   "Setting_updates-policy-mode_Option_2": "Hosszú ideig szünetel (Szünet feloldása a Beállításokban)",
   "Setting_updates-policy-mode_Option_3": "Letiltva (NEM ajánlott, biztonsági kockázat)",
-  "Setting_updates-policy-mode_OptionWarning_2": "⚠️ FIGYELMEZTETÉS: A frissítések hosszú időre történő szüneteltetésével a rendszer sebezhetővé válik a biztonsági fenyegetésekkel szemben. Használja saját felelősségére.",
-  "Setting_updates-policy-mode_OptionWarning_3": "⚠️ FIGYELMEZTETÉS: A frissítések letiltása sebezhetővé teszi a rendszert a biztonsági fenyegetésekkel szemben. Használja saját felelősségére.",
+  "Setting_updates-policy-mode_OptionWarning_2": "FIGYELMEZTETÉS: A frissítések hosszú időre történő szüneteltetésével a rendszer sebezhetővé válik a biztonsági fenyegetésekkel szemben. Használja saját felelősségére.",
+  "Setting_updates-policy-mode_OptionWarning_3": "FIGYELMEZTETÉS: A frissítések letiltása sebezhetővé teszi a rendszert a biztonsági fenyegetésekkel szemben. Használja saját felelősségére.",
   "Setting_updates-policy-mode_OptionTooltip_0": "A Windows alapértelmezett viselkedése – az automatikus frissítések engedélyezve",
   "Setting_updates-policy-mode_OptionTooltip_1": "Csak a kritikus biztonsági frissítéseket telepítse, a funkciófrissítéseket 1 évvel halassza el",
   "Setting_updates-policy-mode_OptionTooltip_2": "Az összes frissítés szüneteltetése 2051-ig – szükség esetén manuálisan szüntesse meg a Windows beállításait",
@@ -691,7 +691,7 @@
   "Setting_gaming-bits-service_Description": "A Windows frissítések és letöltések átvitele a háttérben. A Kézi beállítás lehetővé teszi a frissítések működését, miközben megakadályozza az állandó háttértevékenységet játék közben",
   "Setting_gaming-xbox-auth-manager_Name": "Xbox Live hitelesítéskezelő",
   "Setting_gaming-xbox-auth-manager_Description": "Hitelesítési és engedélyezési szolgáltatásokat nyújt az Xbox Live számára. Biztonságosan letiltható, ha nem használ Xbox Game Pass-t, Microsoft Store játékokat vagy Xbox funkciókat.",
-  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "⚠️ A kikapcsolás megakadályozza, hogy az Xbox Game Pass és a Microsoft Store játékai működjenek",
+  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "A kikapcsolás megakadályozza, hogy az Xbox Game Pass és a Microsoft Store játékai működjenek",
   "Setting_gaming-xbox-game-save_Name": "Xbox Live játékmenet mentés",
   "Setting_gaming-xbox-game-save_Description": "A játékmentéseket az Xbox Live felhőjébe szinkronizálja. Csak az Xbox Game Pass és a Microsoft Store felhőmentést támogató játékaihoz szükséges.",
   "Setting_gaming-xbox-networking_Name": "Xbox Live hálózati szolgáltatás",
@@ -1208,7 +1208,7 @@
   "Status_IdentifyingApps": "Windows alkalmazások azonosítása...",
   "Status_VerifyingApps": "A telepített alkalmazások ellenőrzése...",
   "Status_SortingApps": "Alkalmazások rendezése megjelenítéshez...",
-  "Common_RestartRequired": "⚠️ A változtatások érvénybe lépéséhez újra kell indítani a rendszert",
+  "Common_RestartRequired": "A változtatások érvénybe lépéséhez újra kell indítani a rendszert",
   "Compatibility_Windows10Only": "Ez a beállítás csak a Windows 10-re vonatkozik",
   "Compatibility_Windows11Only": "Ez a beállítás csak a Windows 11-re vonatkozik",
   "Compatibility_MinBuild": "A Windows {0} vagy újabb verzióját igényli",
