--- a/src/Winhance.UI/Features/Common/Localization/it.json
+++ b/src/Winhance.UI/Features/Common/Localization/it.json
@@ -442,8 +442,8 @@
   "Setting_updates-policy-mode_Option_1": "Solo aggiornamenti di sicurezza (consigliato)",
   "Setting_updates-policy-mode_Option_2": "In pausa per molto tempo (riprendi nelle Impostazioni)",
   "Setting_updates-policy-mode_Option_3": "Disabilitato (NON consigliato, rischio per la sicurezza)",
-  "Setting_updates-policy-mode_OptionWarning_2": "⚠️ AVVISO: la sospensione degli aggiornamenti per un lungo periodo lascia il sistema vulnerabile alle minacce alla sicurezza. Usare a proprio rischio.",
-  "Setting_updates-policy-mode_OptionWarning_3": "⚠️ AVVISO: la disabilitazione degli aggiornamenti lascia il sistema vulnerabile alle minacce alla sicurezza. Usare a proprio rischio.",
+  "Setting_updates-policy-mode_OptionWarning_2": "AVVISO: la sospensione degli aggiornamenti per un lungo periodo lascia il sistema vulnerabile alle minacce alla sicurezza. Usare a proprio rischio.",
+  "Setting_updates-policy-mode_OptionWarning_3": "AVVISO: la disabilitazione degli aggiornamenti lascia il sistema vulnerabile alle minacce alla sicurezza. Usare a proprio rischio.",
   "Setting_updates-policy-mode_OptionTooltip_0": "Comportamento predefinito di Windows: aggiornamenti automatici abilitati",
   "Setting_updates-policy-mode_OptionTooltip_1": "Installa solo aggiornamenti di sicurezza critici, posticipa gli aggiornamenti delle funzionalità di 1 anno",
   "Setting_updates-policy-mode_OptionTooltip_2": "Sospendi tutti gli aggiornamenti fino al 2051: riprendi manualmente nelle Impostazioni di Windows quando necessario",
@@ -691,7 +691,7 @@
   "Setting_gaming-bits-service_Description": "Trasferisce gli aggiornamenti di Windows e i download in background. L'impostazione su Manuale consente agli aggiornamenti di funzionare evitando un'attività costante in background durante il gioco",
   "Setting_gaming-xbox-auth-manager_Name": "Gestione autenticazione Xbox Live",
   "Setting_gaming-xbox-auth-manager_Description": "Fornisce servizi di autenticazione e autorizzazione per Xbox Live. Sicuro da disabilitare se non si utilizzano Xbox Game Pass, giochi del Microsoft Store o funzionalità Xbox",
-  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "⚠️ La disabilitazione impedirà il funzionamento dei giochi Xbox Game Pass e Microsoft Store",
+  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "La disabilitazione impedirà il funzionamento dei giochi Xbox Game Pass e Microsoft Store",
   "Setting_gaming-xbox-game-save_Name": "Salvataggio partita Xbox Live",
   "Setting_gaming-xbox-game-save_Description": "Sincronizza i salvataggi delle partite nel cloud di Xbox Live. Necessario solo per i giochi Xbox Game Pass e Microsoft Store con funzionalità di salvataggio nel cloud",
   "Setting_gaming-xbox-networking_Name": "Servizio di rete Xbox Live",
@@ -1204,7 +1204,7 @@
   "Status_IdentifyingApps": "Identificazione delle applicazioni di Windows in corso...",
   "Status_VerifyingApps": "Verifica delle applicazioni installate in corso...",
   "Status_SortingApps": "Ordinamento delle applicazioni per la visualizzazione in corso...",
-  "Common_RestartRequired": "⚠️ Riavvio del sistema richiesto affinché le modifiche abbiano effetto",
+  "Common_RestartRequired": "Riavvio del sistema richiesto affinché le modifiche abbiano effetto",
   "Compatibility_Windows10Only": "Questa impostazione si applica solo a Windows 10",
   "Compatibility_Windows11Only": "Questa impostazione si applica solo a Windows 11",
   "Compatibility_MinBuild": "Richiede la build di Windows {0} o successiva",
