--- a/src/Winhance.UI/Features/Common/Localization/nl-BE.json
+++ b/src/Winhance.UI/Features/Common/Localization/nl-BE.json
@@ -442,8 +442,8 @@
   "Setting_updates-policy-mode_Option_1": "Alleen Beveiligingsupdates (Aanbevolen)",
   "Setting_updates-policy-mode_Option_2": "Lange tijd gepauzeerd (Hervatten in Instellingen)",
   "Setting_updates-policy-mode_Option_3": "Uitgeschakeld (NIET Aanbevolen, Beveiligingsrisico)",
-  "Setting_updates-policy-mode_OptionWarning_2": "⚠️ WAARSCHUWING: Updates lange tijd pauzeren maakt uw systeem kwetsbaar voor beveiligingsbedreigingen. Gebruik op eigen risico.",
-  "Setting_updates-policy-mode_OptionWarning_3": "⚠️ WAARSCHUWING: Updates uitschakelen maakt uw systeem kwetsbaar voor beveiligingsbedreigingen. Gebruik op eigen risico.",
+  "Setting_updates-policy-mode_OptionWarning_2": "WAARSCHUWING: Updates lange tijd pauzeren maakt uw systeem kwetsbaar voor beveiligingsbedreigingen. Gebruik op eigen risico.",
+  "Setting_updates-policy-mode_OptionWarning_3": "WAARSCHUWING: Updates uitschakelen maakt uw systeem kwetsbaar voor beveiligingsbedreigingen. Gebruik op eigen risico.",
   "Setting_updates-policy-mode_OptionTooltip_0": "Windows standaardgedrag - automatische updates ingeschakeld",
   "Setting_updates-policy-mode_OptionTooltip_1": "Installeer alleen kritieke beveiligingsupdates, stel functie-updates 1 jaar uit",
   "Setting_updates-policy-mode_OptionTooltip_2": "Pauzeer alle updates tot 2051 - handmatig hervatten in Windows Instellingen indien nodig",
@@ -691,7 +691,7 @@
   "Setting_gaming-bits-service_Description": "Draagt Windows Updates en downloads over op de achtergrond. Instellen op Handmatig staat updates toe te werken en voorkomt constante achtergrondactiviteit tijdens gamen",
   "Setting_gaming-xbox-auth-manager_Name": "Xbox Live Auth Manager",
   "Setting_gaming-xbox-auth-manager_Description": "Biedt authenticatie- en autorisatieservices voor Xbox Live. Veilig uit te schakelen als u geen Xbox Game Pass, Microsoft Store games of Xbox functies gebruikt",
-  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "⚠️ Uitschakelen voorkomt dat Xbox Game Pass en Microsoft Store games werken",
+  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "Uitschakelen voorkomt dat Xbox Game Pass en Microsoft Store games werken",
   "Setting_gaming-xbox-game-save_Name": "Xbox Live Game Save",
   "Setting_gaming-xbox-game-save_Description": "Synchroniseert game saves naar Xbox Live cloud. Alleen nodig voor Xbox Game Pass en Microsoft Store games met cloud save functies",
   "Setting_gaming-xbox-networking_Name": "Xbox Live Networking Service",
@@ -1204,7 +1204,7 @@
   "Status_IdentifyingApps": "Windows-applicaties identificeren...",
   "Status_VerifyingApps": "Verifiëren welke applicaties zijn geïnstalleerd...",
   "Status_SortingApps": "Applicaties sorteren voor weergave...",
-  "Common_RestartRequired": "⚠️ Systeemherstart vereist om wijzigingen door te voeren",
+  "Common_RestartRequired": "Systeemherstart vereist om wijzigingen door te voeren",
   "Compatibility_Windows10Only": "Deze instelling is alleen van toepassing op Windows 10",
   "Compatibility_Windows11Only": "Deze instelling is alleen van toepassing op Windows 11",
   "Compatibility_MinBuild": "Vereist Windows build {0} of hoger",
