--- a/src/Winhance.UI/Features/Common/Localization/ru.json
+++ b/src/Winhance.UI/Features/Common/Localization/ru.json
@@ -442,8 +442,8 @@
   "Setting_updates-policy-mode_Option_1": "Только обновления безопасности (рекомендуется)",
   "Setting_updates-policy-mode_Option_2": "Приостановлено на длительное время (возобновите в Настройках)",
   "Setting_updates-policy-mode_Option_3": "Отключено (НЕ РЕКОМЕНДУЕТСЯ, риск безопасности)",
-  "Setting_updates-policy-mode_OptionWarning_2": "⚠️ ПРЕДУПРЕЖДЕНИЕ: Приостановка обновлений на длительное время делает вашу систему уязвимой для угроз безопасности. Используйте на свой страх и риск.",
-  "Setting_updates-policy-mode_OptionWarning_3": "⚠️ ПРЕДУПРЕЖДЕНИЕ: Отключение обновлений делает вашу систему уязвимой для угроз безопасности. Используйте на свой страх и риск.",
+  "Setting_updates-policy-mode_OptionWarning_2": "ПРЕДУПРЕЖДЕНИЕ: Приостановка обновлений на длительное время делает вашу систему уязвимой для угроз безопасности. Используйте на свой страх и риск.",
+  "Setting_updates-policy-mode_OptionWarning_3": "ПРЕДУПРЕЖДЕНИЕ: Отключение обновлений делает вашу систему уязвимой для угроз безопасности. Используйте на свой страх и риск.",
   "Setting_updates-policy-mode_OptionTooltip_0": "Поведение Windows по умолчанию - автоматические обновления включены",
   "Setting_updates-policy-mode_OptionTooltip_1": "Устанавливать только критические обновления безопасности, откладывать обновления функций на 1 год",
   "Setting_updates-policy-mode_OptionTooltip_2": "Приостановить все обновления до 2051 года - вручную возобновите в настройках Windows при необходимости",
@@ -691,7 +691,7 @@
   "Setting_gaming-bits-service_Description": "Передает обновления Windows и загрузки в фоновом режиме. Установка в 'Вручную' позволяет работать обновлениям, предотвращая постоянную фоновую активность во время игр",
   "Setting_gaming-xbox-auth-manager_Name": "Диспетчер проверки подлинности Xbox Live",
   "Setting_gaming-xbox-auth-manager_Description": "Предоставляет услуги аутентификации и авторизации для Xbox Live. Безопасно отключать, если вы не используете Xbox Game Pass, игры из Microsoft Store или функции Xbox",
-  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "⚠️ Отключение приведет к тому, что игры Xbox Game Pass и Microsoft Store перестанут работать",
+  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "Отключение приведет к тому, что игры Xbox Game Pass и Microsoft Store перестанут работать",
   "Setting_gaming-xbox-game-save_Name": "Сохранение игр Xbox Live",
   "Setting_gaming-xbox-game-save_Description": "Синхронизирует сохранения игр с облаком Xbox Live. Требуется только для игр Xbox Game Pass и Microsoft Store с функциями облачного сохранения",
   "Setting_gaming-xbox-networking_Name": "Сетевая служба Xbox Live",
@@ -1204,7 +1204,7 @@
   "Status_IdentifyingApps": "Идентификация приложений Windows...",
   "Status_VerifyingApps": "Проверка установленных приложений...",
   "Status_SortingApps": "Сортировка приложений для отображения...",
-  "Common_RestartRequired": "⚠️ Для вступления изменений в силу требуется перезагрузка системы",
+  "Common_RestartRequired": "Для вступления изменений в силу требуется перезагрузка системы",
   "Compatibility_Windows10Only": "Эта настройка применяется только к Windows 10",
   "Compatibility_Windows11Only": "Эта настройка применяется только к Windows 11",
   "Compatibility_MinBuild": "Требуется сборка Windows {0} или выше",
