--- a/src/Winhance.UI/Features/Common/Localization/sv.json
+++ b/src/Winhance.UI/Features/Common/Localization/sv.json
@@ -442,8 +442,8 @@
   "Setting_updates-policy-mode_Option_1": "Endast säkerhetsuppdateringar (rekommenderas)",
   "Setting_updates-policy-mode_Option_2": "Pausad under lång tid (avpausa i Inställningar)",
   "Setting_updates-policy-mode_Option_3": "Inaktiverad (REKOMMENDERAS EJ, säkerhetsrisk)",
-  "Setting_updates-policy-mode_OptionWarning_2": "⚠️ VARNING: Att pausa uppdateringar under lång tid gör ditt system sårbart för säkerhetshot. Använd på egen risk.",
-  "Setting_updates-policy-mode_OptionWarning_3": "⚠️ VARNING: Att inaktivera uppdateringar gör ditt system sårbart för säkerhetshot. Använd på egen risk.",
+  "Setting_updates-policy-mode_OptionWarning_2": "VARNING: Att pausa uppdateringar under lång tid gör ditt system sårbart för säkerhetshot. Använd på egen risk.",
+  "Setting_updates-policy-mode_OptionWarning_3": "VARNING: Att inaktivera uppdateringar gör ditt system sårbart för säkerhetshot. Använd på egen risk.",
   "Setting_updates-policy-mode_OptionTooltip_0": "Windows standardbeteende - automatiska uppdateringar aktiverade",
   "Setting_updates-policy-mode_OptionTooltip_1": "Installera endast kritiska säkerhetsuppdateringar, skjut upp funktionsuppdateringar med 1 år",
   "Setting_updates-policy-mode_OptionTooltip_2": "Pausa alla uppdateringar till 2051 - avpausa manuellt i Windows-inställningar vid behov",
@@ -691,7 +691,7 @@
   "Setting_gaming-bits-service_Description": "Överför Windows-uppdateringar och nedladdningar i bakgrunden. Inställning på Manuell tillåter uppdateringar att fungera samtidigt som konstant bakgrundsaktivitet under spel förhindras",
   "Setting_gaming-xbox-auth-manager_Name": "Xbox Live Auth Manager",
   "Setting_gaming-xbox-auth-manager_Description": "Tillhandahåller autentiserings- och auktoriseringstjänster för Xbox Live. Säkert att inaktivera om du inte använder Xbox Game Pass, Microsoft Store-spel eller Xbox-funktioner",
-  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "⚠️ Inaktivering kommer att förhindra att Xbox Game Pass och Microsoft Store-spel fungerar",
+  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "Inaktivering kommer att förhindra att Xbox Game Pass och Microsoft Store-spel fungerar",
   "Setting_gaming-xbox-game-save_Name": "Xbox Live Spelsparning",
   "Setting_gaming-xbox-game-save_Description": "Synkroniserar spelsparfiler till Xbox Live-molnet. Behövs endast för Xbox Game Pass och Microsoft Store-spel med molnsparfunktioner",
   "Setting_gaming-xbox-networking_Name": "Xbox Live Nätverkstjänst",
@@ -1204,7 +1204,7 @@
   "Status_IdentifyingApps": "Identifierar Windows-program...",
   "Status_VerifyingApps": "Verifierar vilka program som är installerade...",
   "Status_SortingApps": "Sorterar program för visning...",
-  "Common_RestartRequired": "⚠️ Systemomstart krävs för att ändringarna ska träda i kraft",
+  "Common_RestartRequired": "Systemomstart krävs för att ändringarna ska träda i kraft",
   "Compatibility_Windows10Only": "Den här inställningen gäller endast för Windows 10",
   "Compatibility_Windows11Only": "Den här inställningen gäller endast för Windows 11",
   "Compatibility_MinBuild": "Kräver Windows build {0} eller högre",
