--- a/src/Winhance.WPF/Localization/af.json
+++ b/src/Winhance.WPF/Localization/af.json
@@ -429,8 +429,8 @@
   "Setting_updates-policy-mode_Option_1": "Slegs Sekuriteitsopdaterings (Aanbeveel)",
   "Setting_updates-policy-mode_Option_2": "Vir 'n lang tyd gestop (Hervat in Instellings)",
   "Setting_updates-policy-mode_Option_3": "Gedeaktiveer (NIE Aanbeveel, Sekuriteitsrisiko)",
-  "Setting_updates-policy-mode_OptionWarning_2": "⚠️ WAARSKUWING: Om opdaterings vir 'n lang tyd te stop laat jou stelsel kwesbaar vir sekuriteitsbedreigings. Gebruik op eie risiko.",
-  "Setting_updates-policy-mode_OptionWarning_3": "⚠️ WAARSKUWING: Om opdaterings te deaktiveer laat jou stelsel kwesbaar vir sekuriteitsbedreigings. Gebruik op eie risiko.",
+  "Setting_updates-policy-mode_OptionWarning_2": "WAARSKUWING: Om opdaterings vir 'n lang tyd te stop laat jou stelsel kwesbaar vir sekuriteitsbedreigings. Gebruik op eie risiko.",
+  "Setting_updates-policy-mode_OptionWarning_3": "WAARSKUWING: Om opdaterings te deaktiveer laat jou stelsel kwesbaar vir sekuriteitsbedreigings. Gebruik op eie risiko.",
   "Setting_updates-policy-mode_OptionTooltip_0": "Windows verstekgedrag - outomatiese opdaterings geaktiveer",
   "Setting_updates-policy-mode_OptionTooltip_1": "Installeer slegs kritieke sekuriteitsopdaterings, stel funksie-opdaterings met 1 jaar uit",
   "Setting_updates-policy-mode_OptionTooltip_2": "Stop alle opdaterings tot 2051 - hervat handmatig in Windows Instellings wanneer nodig",
@@ -678,7 +678,7 @@
   "Setting_gaming-bits-service_Description": "Dra Windows Opdaterings en aflaaie in die agtergrond oor. Stel na Handmatig laat opdaterings toe om te werk terwyl konstante agtergrondaktiwiteit tydens spel voorkom word",
   "Setting_gaming-xbox-auth-manager_Name": "Xbox Live Verifikasiebestuurder",
   "Setting_gaming-xbox-auth-manager_Description": "Bied verifikasie en magtigingsdienste vir Xbox Live. Veilig om te deaktiveer as jy nie Xbox Game Pass, Microsoft Store speletjies, of Xbox funksies gebruik nie",
-  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "⚠️ Deaktivering sal verhoed dat Xbox Game Pass en Microsoft Store speletjies werk",
+  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "Deaktivering sal verhoed dat Xbox Game Pass en Microsoft Store speletjies werk",
   "Setting_gaming-xbox-game-save_Name": "Xbox Live Speletjie Stoor",
   "Setting_gaming-xbox-game-save_Description": "Sinkroniseer speletjiestore na Xbox Live wolk. Slegs nodig vir Xbox Game Pass en Microsoft Store speletjies met wolkstoorfunksies",
   "Setting_gaming-xbox-networking_Name": "Xbox Live Netwerkdiens",
@@ -1179,7 +1179,7 @@
   "Status_IdentifyingApps": "Identifiseer Windows toepassings...",
   "Status_VerifyingApps": "Verifieer watter toepassings geïnstalleer is...",
   "Status_SortingApps": "Sorteer toepassings vir vertoning...",
-  "Common_RestartRequired": "⚠️ Stelselherbegin vereis vir veranderinge om in werking te tree",
+  "Common_RestartRequired": "Stelselherbegin vereis vir veranderinge om in werking te tree",
   "Compatibility_Windows10Only": "Hierdie instelling is slegs op Windows 10 van toepassing",
   "Compatibility_Windows11Only": "Hierdie instelling is slegs op Windows 11 van toepassing",
   "Compatibility_MinBuild": "Vereis Windows bou {0} of hoër",
@@ -1430,7 +1430,7 @@
   "Setting_gaming-sysmain-service_Option_2": "Outomaties (Aanbeveel vir HDD)",
   "Setting_power-plan-selection_Description": "Kies die aktiewe kragplan vir jou stelsel",
   "Dialog_AdvancedPowerWarning_Title": "Gevorderde Instelling Waarskuwing",
-  "Dialog_AdvancedPowerWarning_Message": "⚠️ Gevorderde Krag Instelling Waarskuwing\n\nHierdie instelling word nie normaalweg in Windows Kragopsies blootgestel nie en vereis registerwysigings om toegang te verkry.\n\nOm dit verkeerd te wysig mag veroorsaak:\n• Stelselonstabiliteit of onverwagte gedrag\n• Verrigtingdegradasie\n• Termiese bestuur probleme\n• Instellings mag nie op alle SVE tipes werk nie (moderne HWP vs nalatenskap)\n\nVerander dit slegs as jy verwerker kragbestuur verstaan.\n\nIs jy seker jy wil hierdie instelling wysig?",
+  "Dialog_AdvancedPowerWarning_Message": "Gevorderde Krag Instelling Waarskuwing\n\nHierdie instelling word nie normaalweg in Windows Kragopsies blootgestel nie en vereis registerwysigings om toegang te verkry.\n\nOm dit verkeerd te wysig mag veroorsaak:\n• Stelselonstabiliteit of onverwagte gedrag\n• Verrigtingdegradasie\n• Termiese bestuur probleme\n• Instellings mag nie op alle SVE tipes werk nie (moderne HWP vs nalatenskap)\n\nVerander dit slegs as jy verwerker kragbestuur verstaan.\n\nIs jy seker jy wil hierdie instelling wysig?",
   "Dialog_AdvancedPowerWarning_DontShowAgain": "Moenie hierdie waarskuwing weer wys vir gevorderde kraginstellings nie",
   "Button_Unlock": "Ontsluit",
   "Common_ClickToUnlock": "Klik om te ontsluit",
