--- a/src/Winhance.WPF/Localization/uk.json
+++ b/src/Winhance.WPF/Localization/uk.json
@@ -429,8 +429,8 @@
   "Setting_updates-policy-mode_Option_1": "Лише оновлення безпеки (рекомендовано)",
   "Setting_updates-policy-mode_Option_2": "Призупинено на тривалий час (зніміть паузу в налаштуваннях)",
   "Setting_updates-policy-mode_Option_3": "Вимкнено (НЕ РЕКОМЕНДУЄТЬСЯ, ризик безпеки)",
-  "Setting_updates-policy-mode_OptionWarning_2": "⚠️ ПОПЕРЕДЖЕННЯ: Призупинення оновлень на тривалий час залишає вашу систему вразливою до загроз безпеки. Використовуйте на свій страх і ризик.",
-  "Setting_updates-policy-mode_OptionWarning_3": "⚠️ ПОПЕРЕДЖЕННЯ: Вимкнення оновлень залишає вашу систему вразливою до загроз безпеки. Використовуйте на свій страх і ризик.",
+  "Setting_updates-policy-mode_OptionWarning_2": "ПОПЕРЕДЖЕННЯ: Призупинення оновлень на тривалий час залишає вашу систему вразливою до загроз безпеки. Використовуйте на свій страх і ризик.",
+  "Setting_updates-policy-mode_OptionWarning_3": "ПОПЕРЕДЖЕННЯ: Вимкнення оновлень залишає вашу систему вразливою до загроз безпеки. Використовуйте на свій страх і ризик.",
   "Setting_updates-policy-mode_OptionTooltip_0": "Поведінка Windows за замовчуванням - автоматичні оновлення увімкнено",
   "Setting_updates-policy-mode_OptionTooltip_1": "Встановлювати лише критичні оновлення безпеки, відкладати оновлення функцій на 1 рік",
   "Setting_updates-policy-mode_OptionTooltip_2": "Призупинити всі оновлення до 2051 року - зніміть паузу вручну в налаштуваннях Windows, коли це необхідно",
@@ -678,7 +678,7 @@
   "Setting_gaming-bits-service_Description": "Передає оновлення Windows та завантаження у фоновому режимі. Встановлення режиму Ручний дозволяє працювати оновленням, запобігаючи постійній фоновій активності під час гри",
   "Setting_gaming-xbox-auth-manager_Name": "Менеджер автентифікації Xbox Live",
   "Setting_gaming-xbox-auth-manager_Description": "Надає послуги автентифікації та авторизації для Xbox Live. Безпечно вимикати, якщо ви не використовуєте Xbox Game Pass, ігри з Microsoft Store або функції Xbox",
-  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "⚠️ Вимкнення не дозволить працювати Xbox Game Pass та іграм з Microsoft Store",
+  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "Вимкнення не дозволить працювати Xbox Game Pass та іграм з Microsoft Store",
   "Setting_gaming-xbox-game-save_Name": "Збереження гри Xbox Live",
   "Setting_gaming-xbox-game-save_Description": "Синхронізує збереження ігор з хмарою Xbox Live. Потрібно лише для ігор Xbox Game Pass та Microsoft Store з функціями хмарного збереження",
   "Setting_gaming-xbox-networking_Name": "Мережева служба Xbox Live",
@@ -1179,7 +1179,7 @@
   "Status_IdentifyingApps": "Ідентифікація додатків Windows...",
   "Status_VerifyingApps": "Перевірка встановлених додатків...",
   "Status_SortingApps": "Сортування додатків для відображення...",
-  "Common_RestartRequired": "⚠️ Для набуття чинності змін потрібне перезавантаження системи",
+  "Common_RestartRequired": "Для набуття чинності змін потрібне перезавантаження системи",
   "Compatibility_Windows10Only": "Це налаштування стосується лише Windows 10",
   "Compatibility_Windows11Only": "Це налаштування стосується лише Windows 11",
   "Compatibility_MinBuild": "Потрібна збірка Windows {0} або новіша",
@@ -1430,7 +1430,7 @@
   "Setting_gaming-sysmain-service_Option_2": "Автоматично (рекомендовано для HDD)",
   "Setting_power-plan-selection_Description": "Виберіть активний план живлення для вашої системи",
   "Dialog_AdvancedPowerWarning_Title": "Попередження про розширені налаштування",
-  "Dialog_AdvancedPowerWarning_Message": "⚠️ Попередження про розширені налаштування живлення\n\nЦе налаштування зазвичай не відображається в параметрах живлення Windows і вимагає змін у реєстрі для доступу.\n\nНеправильна зміна може спричинити:\n• Нестабільність системи або несподівану поведінку\n• Зниження продуктивності\n• Проблеми з керуванням температурою\n• Налаштування можуть не працювати на всіх типах ЦП (сучасні HWP проти застарілих)\n\nЗмінюйте це, лише якщо ви розумієте керування живленням процесора.\n\nВи впевнені, що хочете змінити це налаштування?",
+  "Dialog_AdvancedPowerWarning_Message": "Попередження про розширені налаштування живлення\n\nЦе налаштування зазвичай не відображається в параметрах живлення Windows і вимагає змін у реєстрі для доступу.\n\nНеправильна зміна може спричинити:\n• Нестабільність системи або несподівану поведінку\n• Зниження продуктивності\n• Проблеми з керуванням температурою\n• Налаштування можуть не працювати на всіх типах ЦП (сучасні HWP проти застарілих)\n\nЗмінюйте це, лише якщо ви розумієте керування живленням процесора.\n\nВи впевнені, що хочете змінити це налаштування?",
   "Dialog_AdvancedPowerWarning_DontShowAgain": "Більше не показувати це попередження для розширених налаштувань живлення",
   "Button_Unlock": "Розблокувати",
   "Common_ClickToUnlock": "Натисніть, щоб розблокувати",
