--- a/src/Winhance.WPF/Localization/zh-Hans.json
+++ b/src/Winhance.WPF/Localization/zh-Hans.json
@@ -429,8 +429,8 @@
   "Setting_updates-policy-mode_Option_1": "仅安全更新（推荐）",
   "Setting_updates-policy-mode_Option_2": "长时间暂停（在设置中取消暂停）",
   "Setting_updates-policy-mode_Option_3": "禁用（不推荐，存在安全风险）",
-  "Setting_updates-policy-mode_OptionWarning_2": "⚠️ 警告：长时间暂停更新会使您的系统容易受到安全威胁。请自行承担风险。",
-  "Setting_updates-policy-mode_OptionWarning_3": "⚠️ 警告：禁用更新会使您的系统容易受到安全威胁。请自行承担风险。",
+  "Setting_updates-policy-mode_OptionWarning_2": "警告：长时间暂停更新会使您的系统容易受到安全威胁。请自行承担风险。",
+  "Setting_updates-policy-mode_OptionWarning_3": "警告：禁用更新会使您的系统容易受到安全威胁。请自行承担风险。",
   "Setting_updates-policy-mode_OptionTooltip_0": "Windows 默认行为 - 启用自动更新",
   "Setting_updates-policy-mode_OptionTooltip_1": "仅安装关键安全更新，将功能更新推迟 1 年",
   "Setting_updates-policy-mode_OptionTooltip_2": "暂停所有更新至 2051 年 - 需要时在 Windows 设置中手动取消暂停",
@@ -678,7 +678,7 @@
   "Setting_gaming-bits-service_Description": "在后台传输 Windows 更新和下载。设置为手动允许更新工作，同时防止在游戏期间持续的后台活动",
   "Setting_gaming-xbox-auth-manager_Name": "Xbox Live 身份验证管理器",
   "Setting_gaming-xbox-auth-manager_Description": "为 Xbox Live 提供身份验证和授权服务。如果您不使用 Xbox Game Pass、Microsoft Store 游戏或 Xbox 功能，则可以安全禁用",
-  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "⚠️ 禁用将导致 Xbox Game Pass 和 Microsoft Store 游戏无法正常工作",
+  "Setting_gaming-xbox-auth-manager_OptionWarning_0": "禁用将导致 Xbox Game Pass 和 Microsoft Store 游戏无法正常工作",
   "Setting_gaming-xbox-game-save_Name": "Xbox Live 游戏存档",
   "Setting_gaming-xbox-game-save_Description": "将游戏存档同步到 Xbox Live 云。仅对于具有云存档功能的 Xbox Game Pass 和 Microsoft Store 游戏需要",
   "Setting_gaming-xbox-networking_Name": "Xbox Live 网络服务",
@@ -1179,7 +1179,7 @@
   "Status_IdentifyingApps": "正在识别 Windows 应用程序...",
   "Status_VerifyingApps": "正在验证已安装的应用程序...",
   "Status_SortingApps": "正在排序应用程序以供显示...",
-  "Common_RestartRequired": "⚠️ 需要重新启动系统才能使更改生效",
+  "Common_RestartRequired": "需要重新启动系统才能使更改生效",
   "Compatibility_Windows10Only": "此设置仅适用于 Windows 10",
   "Compatibility_Windows11Only": "此设置仅适用于 Windows 11",
   "Compatibility_MinBuild": "需要 Windows 版本 {0} 或更高版本",
@@ -1430,7 +1430,7 @@
   "Setting_gaming-sysmain-service_Option_2": "自动（推荐用于 HDD）",
   "Setting_power-plan-selection_Description": "选择您系统的活动电源计划",
   "Dialog_AdvancedPowerWarning_Title": "高级设置警告",
-  "Dialog_AdvancedPowerWarning_Message": "⚠️ 高级电源设置警告\n\n此设置通常不会在 Windows 电源选项中公开，需要修改注册表才能访问。\n\n不正确地修改它可能会导致：\n• 系统不稳定或意外行为\n• 性能下降\n• 热管理问题\n• 设置可能不适用于所有 CPU 类型（现代 HWP 与旧版）\n\n仅当您了解处理器电源管理时才更改此设置。\n\n您确定要修改此设置吗？",
+  "Dialog_AdvancedPowerWarning_Message": "高级电源设置警告\n\n此设置通常不会在 Windows 电源选项中公开，需要修改注册表才能访问。\n\n不正确地修改它可能会导致：\n• 系统不稳定或意外行为\n• 性能下降\n• 热管理问题\n• 设置可能不适用于所有 CPU 类型（现代 HWP 与旧版）\n\n仅当您了解处理器电源管理时才更改此设置。\n\n您确定要修改此设置吗？",
   "Dialog_AdvancedPowerWarning_DontShowAgain": "不再显示此高级电源设置警告",
   "Button_Unlock": "解锁",
   "Common_ClickToUnlock": "点击解锁",
